sdk-docs_versioned_docs/version-19.0.0/enums/Types/PublicEnum8F5A39C8Ee/PublicEnum8F5A39C8Ee.md
---
id: "PublicEnum8F5A39C8Ee"
title: "Enumeration: PublicEnum8F5A39C8Ee"
sidebar_label: "PublicEnum8F5A39C8Ee"
---

[types](../../../modules/Types/Types.md).PublicEnum8F5A39C8Ee

\n@enumName EventIdEnum

## Enumeration Members

### AcceptedPayingKey

• **AcceptedPayingKey** = ``"AcceptedPayingKey"``

#### Defined in

[middleware/typesV2.ts:24319](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24319)

___

### AccountBalanceBurned

• **AccountBalanceBurned** = ``"AccountBalanceBurned"``

#### Defined in

[middleware/typesV2.ts:24320](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24320)

___

### ActiveLimitChanged

• **ActiveLimitChanged** = ``"ActiveLimitChanged"``

#### Defined in

[middleware/typesV2.ts:24321](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24321)

___

### ActivePipLimitChanged

• **ActivePipLimitChanged** = ``"ActivePipLimitChanged"``

#### Defined in

[middleware/typesV2.ts:24322](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24322)

___

### AdminChanged

• **AdminChanged** = ``"AdminChanged"``

#### Defined in

[middleware/typesV2.ts:24323](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24323)

___

### AffirmationWithdrawn

• **AffirmationWithdrawn** = ``"AffirmationWithdrawn"``

#### Defined in

[middleware/typesV2.ts:24324](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24324)

___

### AgentAdded

• **AgentAdded** = ``"AgentAdded"``

#### Defined in

[middleware/typesV2.ts:24325](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24325)

___

### AgentRemoved

• **AgentRemoved** = ``"AgentRemoved"``

#### Defined in

[middleware/typesV2.ts:24326](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24326)

___

### AllGood

• **AllGood** = ``"AllGood"``

#### Defined in

[middleware/typesV2.ts:24327](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24327)

___

### Approval

• **Approval** = ``"Approval"``

#### Defined in

[middleware/typesV2.ts:24328](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24328)

___

### Approved

• **Approved** = ``"Approved"``

#### Defined in

[middleware/typesV2.ts:24329](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24329)

___

### AssetCompliancePaused

• **AssetCompliancePaused** = ``"AssetCompliancePaused"``

#### Defined in

[middleware/typesV2.ts:24330](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24330)

___

### AssetComplianceReplaced

• **AssetComplianceReplaced** = ``"AssetComplianceReplaced"``

#### Defined in

[middleware/typesV2.ts:24331](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24331)

___

### AssetComplianceReset

• **AssetComplianceReset** = ``"AssetComplianceReset"``

#### Defined in

[middleware/typesV2.ts:24332](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24332)

___

### AssetComplianceResumed

• **AssetComplianceResumed** = ``"AssetComplianceResumed"``

#### Defined in

[middleware/typesV2.ts:24333](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24333)

___

### AssetCreated

• **AssetCreated** = ``"AssetCreated"``

#### Defined in

[middleware/typesV2.ts:24334](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24334)

___

### AssetDidRegistered

• **AssetDidRegistered** = ``"AssetDidRegistered"``

#### Defined in

[middleware/typesV2.ts:24335](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24335)

___

### AssetFrozen

• **AssetFrozen** = ``"AssetFrozen"``

#### Defined in

[middleware/typesV2.ts:24336](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24336)

___

### AssetOwnershipTransferred

• **AssetOwnershipTransferred** = ``"AssetOwnershipTransferred"``

#### Defined in

[middleware/typesV2.ts:24337](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24337)

___

### AssetPurchased

• **AssetPurchased** = ``"AssetPurchased"``

#### Defined in

[middleware/typesV2.ts:24338](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24338)

___

### AssetRenamed

• **AssetRenamed** = ``"AssetRenamed"``

#### Defined in

[middleware/typesV2.ts:24339](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24339)

___

### AssetRuleChanged

• **AssetRuleChanged** = ``"AssetRuleChanged"``

#### Defined in

[middleware/typesV2.ts:24340](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24340)

___

### AssetRuleRemoved

• **AssetRuleRemoved** = ``"AssetRuleRemoved"``

#### Defined in

[middleware/typesV2.ts:24341](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24341)

___

### AssetRulesPaused

• **AssetRulesPaused** = ``"AssetRulesPaused"``

#### Defined in

[middleware/typesV2.ts:24342](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24342)

___

### AssetRulesReplaced

• **AssetRulesReplaced** = ``"AssetRulesReplaced"``

#### Defined in

[middleware/typesV2.ts:24343](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24343)

___

### AssetRulesReset

• **AssetRulesReset** = ``"AssetRulesReset"``

#### Defined in

[middleware/typesV2.ts:24344](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24344)

___

### AssetRulesResumed

• **AssetRulesResumed** = ``"AssetRulesResumed"``

#### Defined in

[middleware/typesV2.ts:24345](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24345)

___

### AssetStatsUpdated

• **AssetStatsUpdated** = ``"AssetStatsUpdated"``

#### Defined in

[middleware/typesV2.ts:24346](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24346)

___

### AssetTypeChanged

• **AssetTypeChanged** = ``"AssetTypeChanged"``

#### Defined in

[middleware/typesV2.ts:24347](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24347)

___

### AssetUnfrozen

• **AssetUnfrozen** = ``"AssetUnfrozen"``

#### Defined in

[middleware/typesV2.ts:24348](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24348)

___

### AuthorizationAdded

• **AuthorizationAdded** = ``"AuthorizationAdded"``

#### Defined in

[middleware/typesV2.ts:24349](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24349)

___

### AuthorizationConsumed

• **AuthorizationConsumed** = ``"AuthorizationConsumed"``

#### Defined in

[middleware/typesV2.ts:24350](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24350)

___

### AuthorizationRejected

• **AuthorizationRejected** = ``"AuthorizationRejected"``

#### Defined in

[middleware/typesV2.ts:24351](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24351)

___

### AuthorizationRetryLimitReached

• **AuthorizationRetryLimitReached** = ``"AuthorizationRetryLimitReached"``

#### Defined in

[middleware/typesV2.ts:24352](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24352)

___

### AuthorizationRevoked

• **AuthorizationRevoked** = ``"AuthorizationRevoked"``

#### Defined in

[middleware/typesV2.ts:24353](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24353)

___

### AuthorizedPayingKey

• **AuthorizedPayingKey** = ``"AuthorizedPayingKey"``

#### Defined in

[middleware/typesV2.ts:24354](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24354)

___

### BalanceSet

• **BalanceSet** = ``"BalanceSet"``

#### Defined in

[middleware/typesV2.ts:24355](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24355)

___

### BallotCancelled

• **BallotCancelled** = ``"BallotCancelled"``

#### Defined in

[middleware/typesV2.ts:24356](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24356)

___

### BallotCreated

• **BallotCreated** = ``"BallotCreated"``

#### Defined in

[middleware/typesV2.ts:24357](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24357)

___

### BatchCompleted

• **BatchCompleted** = ``"BatchCompleted"``

#### Defined in

[middleware/typesV2.ts:24358](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24358)

___

### BatchInterrupted

• **BatchInterrupted** = ``"BatchInterrupted"``

#### Defined in

[middleware/typesV2.ts:24359](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24359)

___

### BatchOptimisticFailed

• **BatchOptimisticFailed** = ``"BatchOptimisticFailed"``

#### Defined in

[middleware/typesV2.ts:24360](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24360)

___

### BenefitClaimed

• **BenefitClaimed** = ``"BenefitClaimed"``

#### Defined in

[middleware/typesV2.ts:24361](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24361)

___

### Bonded

• **Bonded** = ``"Bonded"``

#### Defined in

[middleware/typesV2.ts:24362](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24362)

___

### BridgeLimitUpdated

• **BridgeLimitUpdated** = ``"BridgeLimitUpdated"``

#### Defined in

[middleware/typesV2.ts:24363](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24363)

___

### BridgeTxFailed

• **BridgeTxFailed** = ``"BridgeTxFailed"``

#### Defined in

[middleware/typesV2.ts:24364](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24364)

___

### BridgeTxScheduleFailed

• **BridgeTxScheduleFailed** = ``"BridgeTxScheduleFailed"``

#### Defined in

[middleware/typesV2.ts:24365](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24365)

___

### BridgeTxScheduled

• **BridgeTxScheduled** = ``"BridgeTxScheduled"``

#### Defined in

[middleware/typesV2.ts:24366](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24366)

___

### Bridged

• **Bridged** = ``"Bridged"``

#### Defined in

[middleware/typesV2.ts:24367](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24367)

___

### CaInitiated

• **CaInitiated** = ``"CAInitiated"``

#### Defined in

[middleware/typesV2.ts:24369](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24369)

___

### CaLinkedToDoc

• **CaLinkedToDoc** = ``"CALinkedToDoc"``

#### Defined in

[middleware/typesV2.ts:24370](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24370)

___

### CaRemoved

• **CaRemoved** = ``"CARemoved"``

#### Defined in

[middleware/typesV2.ts:24371](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24371)

___

### CaaTransferred

• **CaaTransferred** = ``"CAATransferred"``

#### Defined in

[middleware/typesV2.ts:24368](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24368)

___

### CallLookupFailed

• **CallLookupFailed** = ``"CallLookupFailed"``

#### Defined in

[middleware/typesV2.ts:24372](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24372)

___

### Canceled

• **Canceled** = ``"Canceled"``

#### Defined in

[middleware/typesV2.ts:24373](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24373)

___

### CddClaimsInvalidated

• **CddClaimsInvalidated** = ``"CddClaimsInvalidated"``

#### Defined in

[middleware/typesV2.ts:24374](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24374)

___

### CddRequirementForMasterKeyUpdated

• **CddRequirementForMasterKeyUpdated** = ``"CddRequirementForMasterKeyUpdated"``

#### Defined in

[middleware/typesV2.ts:24375](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24375)

___

### CddRequirementForPrimaryKeyUpdated

• **CddRequirementForPrimaryKeyUpdated** = ``"CddRequirementForPrimaryKeyUpdated"``

#### Defined in

[middleware/typesV2.ts:24376](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24376)

___

### CddStatus

• **CddStatus** = ``"CddStatus"``

#### Defined in

[middleware/typesV2.ts:24377](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24377)

___

### CheckpointCreated

• **CheckpointCreated** = ``"CheckpointCreated"``

#### Defined in

[middleware/typesV2.ts:24378](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24378)

___

### ClaimAdded

• **ClaimAdded** = ``"ClaimAdded"``

#### Defined in

[middleware/typesV2.ts:24379](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24379)

___

### ClaimRevoked

• **ClaimRevoked** = ``"ClaimRevoked"``

#### Defined in

[middleware/typesV2.ts:24380](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24380)

___

### ClassicTickerClaimed

• **ClassicTickerClaimed** = ``"ClassicTickerClaimed"``

#### Defined in

[middleware/typesV2.ts:24381](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24381)

___

### Cleared

• **Cleared** = ``"Cleared"``

#### Defined in

[middleware/typesV2.ts:24382](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24382)

___

### Closed

• **Closed** = ``"Closed"``

#### Defined in

[middleware/typesV2.ts:24383](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24383)

___

### CodeRemoved

• **CodeRemoved** = ``"CodeRemoved"``

#### Defined in

[middleware/typesV2.ts:24384](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24384)

___

### CodeStored

• **CodeStored** = ``"CodeStored"``

#### Defined in

[middleware/typesV2.ts:24385](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24385)

___

### CodeUpdated

• **CodeUpdated** = ``"CodeUpdated"``

#### Defined in

[middleware/typesV2.ts:24386](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24386)

___

### CoefficientSet

• **CoefficientSet** = ``"CoefficientSet"``

#### Defined in

[middleware/typesV2.ts:24387](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24387)

___

### CommissionCapUpdated

• **CommissionCapUpdated** = ``"CommissionCapUpdated"``

#### Defined in

[middleware/typesV2.ts:24388](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24388)

___

### ComplianceRequirementChanged

• **ComplianceRequirementChanged** = ``"ComplianceRequirementChanged"``

#### Defined in

[middleware/typesV2.ts:24389](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24389)

___

### ComplianceRequirementCreated

• **ComplianceRequirementCreated** = ``"ComplianceRequirementCreated"``

#### Defined in

[middleware/typesV2.ts:24390](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24390)

___

### ComplianceRequirementRemoved

• **ComplianceRequirementRemoved** = ``"ComplianceRequirementRemoved"``

#### Defined in

[middleware/typesV2.ts:24391](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24391)

___

### ContractCodeUpdated

• **ContractCodeUpdated** = ``"ContractCodeUpdated"``

#### Defined in

[middleware/typesV2.ts:24392](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24392)

___

### ContractEmitted

• **ContractEmitted** = ``"ContractEmitted"``

#### Defined in

[middleware/typesV2.ts:24393](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24393)

___

### ContractExecution

• **ContractExecution** = ``"ContractExecution"``

#### Defined in

[middleware/typesV2.ts:24394](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24394)

___

### ControllerChanged

• **ControllerChanged** = ``"ControllerChanged"``

#### Defined in

[middleware/typesV2.ts:24395](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24395)

___

### ControllerRedemption

• **ControllerRedemption** = ``"ControllerRedemption"``

#### Defined in

[middleware/typesV2.ts:24396](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24396)

___

### ControllerTransfer

• **ControllerTransfer** = ``"ControllerTransfer"``

#### Defined in

[middleware/typesV2.ts:24397](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24397)

___

### Created

• **Created** = ``"Created"``

#### Defined in

[middleware/typesV2.ts:24398](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24398)

___

### CustodyAllowanceChanged

• **CustodyAllowanceChanged** = ``"CustodyAllowanceChanged"``

#### Defined in

[middleware/typesV2.ts:24399](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24399)

___

### CustodyTransfer

• **CustodyTransfer** = ``"CustodyTransfer"``

#### Defined in

[middleware/typesV2.ts:24400](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24400)

___

### CustomAssetTypeExists

• **CustomAssetTypeExists** = ``"CustomAssetTypeExists"``

#### Defined in

[middleware/typesV2.ts:24401](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24401)

___

### CustomAssetTypeRegistered

• **CustomAssetTypeRegistered** = ``"CustomAssetTypeRegistered"``

#### Defined in

[middleware/typesV2.ts:24402](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24402)

___

### CustomClaimTypeAdded

• **CustomClaimTypeAdded** = ``"CustomClaimTypeAdded"``

#### Defined in

[middleware/typesV2.ts:24403](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24403)

___

### DefaultEnactmentPeriodChanged

• **DefaultEnactmentPeriodChanged** = ``"DefaultEnactmentPeriodChanged"``

#### Defined in

[middleware/typesV2.ts:24404](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24404)

___

### DefaultTargetIdentitiesChanged

• **DefaultTargetIdentitiesChanged** = ``"DefaultTargetIdentitiesChanged"``

#### Defined in

[middleware/typesV2.ts:24405](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24405)

___

### DefaultWithholdingTaxChanged

• **DefaultWithholdingTaxChanged** = ``"DefaultWithholdingTaxChanged"``

#### Defined in

[middleware/typesV2.ts:24406](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24406)

___

### DidCreated

• **DidCreated** = ``"DidCreated"``

#### Defined in

[middleware/typesV2.ts:24407](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24407)

___

### DidStatus

• **DidStatus** = ``"DidStatus"``

#### Defined in

[middleware/typesV2.ts:24408](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24408)

___

### DidWithholdingTaxChanged

• **DidWithholdingTaxChanged** = ``"DidWithholdingTaxChanged"``

#### Defined in

[middleware/typesV2.ts:24409](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24409)

___

### Dispatched

• **Dispatched** = ``"Dispatched"``

#### Defined in

[middleware/typesV2.ts:24410](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24410)

___

### DividendCanceled

• **DividendCanceled** = ``"DividendCanceled"``

#### Defined in

[middleware/typesV2.ts:24411](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24411)

___

### DividendCreated

• **DividendCreated** = ``"DividendCreated"``

#### Defined in

[middleware/typesV2.ts:24412](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24412)

___

### DividendPaidOutToUser

• **DividendPaidOutToUser** = ``"DividendPaidOutToUser"``

#### Defined in

[middleware/typesV2.ts:24413](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24413)

___

### DividendRemainingClaimed

• **DividendRemainingClaimed** = ``"DividendRemainingClaimed"``

#### Defined in

[middleware/typesV2.ts:24414](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24414)

___

### DivisibilityChanged

• **DivisibilityChanged** = ``"DivisibilityChanged"``

#### Defined in

[middleware/typesV2.ts:24415](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24415)

___

### DocumentAdded

• **DocumentAdded** = ``"DocumentAdded"``

#### Defined in

[middleware/typesV2.ts:24416](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24416)

___

### DocumentRemoved

• **DocumentRemoved** = ``"DocumentRemoved"``

#### Defined in

[middleware/typesV2.ts:24417](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24417)

___

### Dummy

• **Dummy** = ``"Dummy"``

#### Defined in

[middleware/typesV2.ts:24418](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24418)

___

### Endowed

• **Endowed** = ``"Endowed"``

#### Defined in

[middleware/typesV2.ts:24419](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24419)

___

### EraPayout

• **EraPayout** = ``"EraPayout"``

#### Defined in

[middleware/typesV2.ts:24420](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24420)

___

### Evicted

• **Evicted** = ``"Evicted"``

#### Defined in

[middleware/typesV2.ts:24421](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24421)

___

### Executed

• **Executed** = ``"Executed"``

#### Defined in

[middleware/typesV2.ts:24422](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24422)

___

### ExecutionCancellingFailed

• **ExecutionCancellingFailed** = ``"ExecutionCancellingFailed"``

#### Defined in

[middleware/typesV2.ts:24423](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24423)

___

### ExecutionScheduled

• **ExecutionScheduled** = ``"ExecutionScheduled"``

#### Defined in

[middleware/typesV2.ts:24424](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24424)

___

### ExecutionSchedulingFailed

• **ExecutionSchedulingFailed** = ``"ExecutionSchedulingFailed"``

#### Defined in

[middleware/typesV2.ts:24425](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24425)

___

### ExemptedUpdated

• **ExemptedUpdated** = ``"ExemptedUpdated"``

#### Defined in

[middleware/typesV2.ts:24426](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24426)

___

### ExemptionListModified

• **ExemptionListModified** = ``"ExemptionListModified"``

#### Defined in

[middleware/typesV2.ts:24427](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24427)

___

### ExemptionsAdded

• **ExemptionsAdded** = ``"ExemptionsAdded"``

#### Defined in

[middleware/typesV2.ts:24428](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24428)

___

### ExemptionsRemoved

• **ExemptionsRemoved** = ``"ExemptionsRemoved"``

#### Defined in

[middleware/typesV2.ts:24429](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24429)

___

### ExpiresAfterUpdated

• **ExpiresAfterUpdated** = ``"ExpiresAfterUpdated"``

#### Defined in

[middleware/typesV2.ts:24430](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24430)

___

### ExpiryScheduled

• **ExpiryScheduled** = ``"ExpiryScheduled"``

#### Defined in

[middleware/typesV2.ts:24431](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24431)

___

### ExpirySchedulingFailed

• **ExpirySchedulingFailed** = ``"ExpirySchedulingFailed"``

#### Defined in

[middleware/typesV2.ts:24432](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24432)

___

### ExtensionAdded

• **ExtensionAdded** = ``"ExtensionAdded"``

#### Defined in

[middleware/typesV2.ts:24433](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24433)

___

### ExtensionArchived

• **ExtensionArchived** = ``"ExtensionArchived"``

#### Defined in

[middleware/typesV2.ts:24434](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24434)

___

### ExtensionRemoved

• **ExtensionRemoved** = ``"ExtensionRemoved"``

#### Defined in

[middleware/typesV2.ts:24435](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24435)

___

### ExtensionUnArchive

• **ExtensionUnArchive** = ``"ExtensionUnArchive"``

#### Defined in

[middleware/typesV2.ts:24436](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24436)

___

### ExtrinsicFailed

• **ExtrinsicFailed** = ``"ExtrinsicFailed"``

#### Defined in

[middleware/typesV2.ts:24437](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24437)

___

### ExtrinsicSuccess

• **ExtrinsicSuccess** = ``"ExtrinsicSuccess"``

#### Defined in

[middleware/typesV2.ts:24438](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24438)

___

### FailedToExecuteInstruction

• **FailedToExecuteInstruction** = ``"FailedToExecuteInstruction"``

#### Defined in

[middleware/typesV2.ts:24439](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24439)

___

### FeeCharged

• **FeeCharged** = ``"FeeCharged"``

#### Defined in

[middleware/typesV2.ts:24440](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24440)

___

### FeeSet

• **FeeSet** = ``"FeeSet"``

#### Defined in

[middleware/typesV2.ts:24441](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24441)

___

### FinalVotes

• **FinalVotes** = ``"FinalVotes"``

#### Defined in

[middleware/typesV2.ts:24442](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24442)

___

### FreezeAdminAdded

• **FreezeAdminAdded** = ``"FreezeAdminAdded"``

#### Defined in

[middleware/typesV2.ts:24443](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24443)

___

### FreezeAdminRemoved

• **FreezeAdminRemoved** = ``"FreezeAdminRemoved"``

#### Defined in

[middleware/typesV2.ts:24444](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24444)

___

### Frozen

• **Frozen** = ``"Frozen"``

#### Defined in

[middleware/typesV2.ts:24445](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24445)

___

### FrozenTx

• **FrozenTx** = ``"FrozenTx"``

#### Defined in

[middleware/typesV2.ts:24446](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24446)

___

### FundingRoundSet

• **FundingRoundSet** = ``"FundingRoundSet"``

#### Defined in

[middleware/typesV2.ts:24447](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24447)

___

### FundraiserClosed

• **FundraiserClosed** = ``"FundraiserClosed"``

#### Defined in

[middleware/typesV2.ts:24448](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24448)

___

### FundraiserCreated

• **FundraiserCreated** = ``"FundraiserCreated"``

#### Defined in

[middleware/typesV2.ts:24449](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24449)

___

### FundraiserFrozen

• **FundraiserFrozen** = ``"FundraiserFrozen"``

#### Defined in

[middleware/typesV2.ts:24450](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24450)

___

### FundraiserUnfrozen

• **FundraiserUnfrozen** = ``"FundraiserUnfrozen"``

#### Defined in

[middleware/typesV2.ts:24451](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24451)

___

### FundraiserWindowModifed

• **FundraiserWindowModifed** = ``"FundraiserWindowModifed"``

#### Defined in

[middleware/typesV2.ts:24452](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24452)

___

### FundraiserWindowModified

• **FundraiserWindowModified** = ``"FundraiserWindowModified"``

#### Defined in

[middleware/typesV2.ts:24453](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24453)

___

### FundsRaised

• **FundsRaised** = ``"FundsRaised"``

#### Defined in

[middleware/typesV2.ts:24454](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24454)

___

### GlobalCommissionUpdated

• **GlobalCommissionUpdated** = ``"GlobalCommissionUpdated"``

#### Defined in

[middleware/typesV2.ts:24455](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24455)

___

### GroupChanged

• **GroupChanged** = ``"GroupChanged"``

#### Defined in

[middleware/typesV2.ts:24456](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24456)

___

### GroupCreated

• **GroupCreated** = ``"GroupCreated"``

#### Defined in

[middleware/typesV2.ts:24457](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24457)

___

### GroupPermissionsUpdated

• **GroupPermissionsUpdated** = ``"GroupPermissionsUpdated"``

#### Defined in

[middleware/typesV2.ts:24458](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24458)

___

### HeartbeatReceived

• **HeartbeatReceived** = ``"HeartbeatReceived"``

#### Defined in

[middleware/typesV2.ts:24459](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24459)

___

### HistoricalPipsPruned

• **HistoricalPipsPruned** = ``"HistoricalPipsPruned"``

#### Defined in

[middleware/typesV2.ts:24460](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24460)

___

### IdentifiersUpdated

• **IdentifiersUpdated** = ``"IdentifiersUpdated"``

#### Defined in

[middleware/typesV2.ts:24461](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24461)

___

### IndexAssigned

• **IndexAssigned** = ``"IndexAssigned"``

#### Defined in

[middleware/typesV2.ts:24462](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24462)

___

### IndexFreed

• **IndexFreed** = ``"IndexFreed"``

#### Defined in

[middleware/typesV2.ts:24463](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24463)

___

### IndexFrozen

• **IndexFrozen** = ``"IndexFrozen"``

#### Defined in

[middleware/typesV2.ts:24464](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24464)

___

### IndividualCommissionEnabled

• **IndividualCommissionEnabled** = ``"IndividualCommissionEnabled"``

#### Defined in

[middleware/typesV2.ts:24465](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24465)

___

### Instantiated

• **Instantiated** = ``"Instantiated"``

#### Defined in

[middleware/typesV2.ts:24466](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24466)

___

### InstantiationFeeChanged

• **InstantiationFeeChanged** = ``"InstantiationFeeChanged"``

#### Defined in

[middleware/typesV2.ts:24467](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24467)

___

### InstantiationFreezed

• **InstantiationFreezed** = ``"InstantiationFreezed"``

#### Defined in

[middleware/typesV2.ts:24468](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24468)

___

### InstantiationUnFreezed

• **InstantiationUnFreezed** = ``"InstantiationUnFreezed"``

#### Defined in

[middleware/typesV2.ts:24469](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24469)

___

### InstructionAffirmed

• **InstructionAffirmed** = ``"InstructionAffirmed"``

#### Defined in

[middleware/typesV2.ts:24470](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24470)

___

### InstructionAuthorized

• **InstructionAuthorized** = ``"InstructionAuthorized"``

#### Defined in

[middleware/typesV2.ts:24471](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24471)

___

### InstructionCreated

• **InstructionCreated** = ``"InstructionCreated"``

#### Defined in

[middleware/typesV2.ts:24472](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24472)

___

### InstructionExecuted

• **InstructionExecuted** = ``"InstructionExecuted"``

#### Defined in

[middleware/typesV2.ts:24473](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24473)

___

### InstructionFailed

• **InstructionFailed** = ``"InstructionFailed"``

#### Defined in

[middleware/typesV2.ts:24474](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24474)

___

### InstructionRejected

• **InstructionRejected** = ``"InstructionRejected"``

#### Defined in

[middleware/typesV2.ts:24475](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24475)

___

### InstructionRescheduled

• **InstructionRescheduled** = ``"InstructionRescheduled"``

#### Defined in

[middleware/typesV2.ts:24476](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24476)

___

### InstructionUnauthorized

• **InstructionUnauthorized** = ``"InstructionUnauthorized"``

#### Defined in

[middleware/typesV2.ts:24477](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24477)

___

### InvalidatedNominators

• **InvalidatedNominators** = ``"InvalidatedNominators"``

#### Defined in

[middleware/typesV2.ts:24478](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24478)

___

### Invested

• **Invested** = ``"Invested"``

#### Defined in

[middleware/typesV2.ts:24479](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24479)

___

### InvestorUniquenessClaimNotAllowed

• **InvestorUniquenessClaimNotAllowed** = ``"InvestorUniquenessClaimNotAllowed"``

#### Defined in

[middleware/typesV2.ts:24480](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24480)

___

### IsIssuable

• **IsIssuable** = ``"IsIssuable"``

#### Defined in

[middleware/typesV2.ts:24481](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24481)

___

### Issued

• **Issued** = ``"Issued"``

#### Defined in

[middleware/typesV2.ts:24482](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24482)

___

### ItnRewardClaimed

• **ItnRewardClaimed** = ``"ItnRewardClaimed"``

#### Defined in

[middleware/typesV2.ts:24483](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24483)

___

### KeyChanged

• **KeyChanged** = ``"KeyChanged"``

#### Defined in

[middleware/typesV2.ts:24484](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24484)

___

### KilledAccount

• **KilledAccount** = ``"KilledAccount"``

#### Defined in

[middleware/typesV2.ts:24485](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24485)

___

### LegFailedExecution

• **LegFailedExecution** = ``"LegFailedExecution"``

#### Defined in

[middleware/typesV2.ts:24486](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24486)

___

### MasterKeyUpdated

• **MasterKeyUpdated** = ``"MasterKeyUpdated"``

#### Defined in

[middleware/typesV2.ts:24487](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24487)

___

### MaxDetailsLengthChanged

• **MaxDetailsLengthChanged** = ``"MaxDetailsLengthChanged"``

#### Defined in

[middleware/typesV2.ts:24488](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24488)

___

### MaxPipSkipCountChanged

• **MaxPipSkipCountChanged** = ``"MaxPipSkipCountChanged"``

#### Defined in

[middleware/typesV2.ts:24489](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24489)

___

### MaximumSchedulesComplexityChanged

• **MaximumSchedulesComplexityChanged** = ``"MaximumSchedulesComplexityChanged"``

#### Defined in

[middleware/typesV2.ts:24490](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24490)

___

### MemberAdded

• **MemberAdded** = ``"MemberAdded"``

#### Defined in

[middleware/typesV2.ts:24491](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24491)

___

### MemberRemoved

• **MemberRemoved** = ``"MemberRemoved"``

#### Defined in

[middleware/typesV2.ts:24492](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24492)

___

### MemberRevoked

• **MemberRevoked** = ``"MemberRevoked"``

#### Defined in

[middleware/typesV2.ts:24493](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24493)

___

### MembersReset

• **MembersReset** = ``"MembersReset"``

#### Defined in

[middleware/typesV2.ts:24494](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24494)

___

### MembersSwapped

• **MembersSwapped** = ``"MembersSwapped"``

#### Defined in

[middleware/typesV2.ts:24495](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24495)

___

### MetaChanged

• **MetaChanged** = ``"MetaChanged"``

#### Defined in

[middleware/typesV2.ts:24496](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24496)

___

### MinimumBondThresholdUpdated

• **MinimumBondThresholdUpdated** = ``"MinimumBondThresholdUpdated"``

#### Defined in

[middleware/typesV2.ts:24497](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24497)

___

### MinimumProposalDepositChanged

• **MinimumProposalDepositChanged** = ``"MinimumProposalDepositChanged"``

#### Defined in

[middleware/typesV2.ts:24498](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24498)

___

### MockInvestorUidCreated

• **MockInvestorUidCreated** = ``"MockInvestorUIDCreated"``

#### Defined in

[middleware/typesV2.ts:24499](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24499)

___

### MovedBetweenPortfolios

• **MovedBetweenPortfolios** = ``"MovedBetweenPortfolios"``

#### Defined in

[middleware/typesV2.ts:24500](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24500)

___

### MultiSigCreated

• **MultiSigCreated** = ``"MultiSigCreated"``

#### Defined in

[middleware/typesV2.ts:24501](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24501)

___

### MultiSigSignaturesRequiredChanged

• **MultiSigSignaturesRequiredChanged** = ``"MultiSigSignaturesRequiredChanged"``

#### Defined in

[middleware/typesV2.ts:24502](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24502)

___

### MultiSigSignerAdded

• **MultiSigSignerAdded** = ``"MultiSigSignerAdded"``

#### Defined in

[middleware/typesV2.ts:24503](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24503)

___

### MultiSigSignerAuthorized

• **MultiSigSignerAuthorized** = ``"MultiSigSignerAuthorized"``

#### Defined in

[middleware/typesV2.ts:24504](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24504)

___

### MultiSigSignerRemoved

• **MultiSigSignerRemoved** = ``"MultiSigSignerRemoved"``

#### Defined in

[middleware/typesV2.ts:24505](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24505)

___

### NewAccount

• **NewAccount** = ``"NewAccount"``

#### Defined in

[middleware/typesV2.ts:24506](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24506)

___

### NewAssetRuleCreated

• **NewAssetRuleCreated** = ``"NewAssetRuleCreated"``

#### Defined in

[middleware/typesV2.ts:24507](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24507)

___

### NewAuthorities

• **NewAuthorities** = ``"NewAuthorities"``

#### Defined in

[middleware/typesV2.ts:24508](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24508)

___

### NewSession

• **NewSession** = ``"NewSession"``

#### Defined in

[middleware/typesV2.ts:24509](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24509)

___

### Nominated

• **Nominated** = ``"Nominated"``

#### Defined in

[middleware/typesV2.ts:24510](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24510)

___

### Noted

• **Noted** = ``"Noted"``

#### Defined in

[middleware/typesV2.ts:24511](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24511)

___

### OffChainAuthorizationRevoked

• **OffChainAuthorizationRevoked** = ``"OffChainAuthorizationRevoked"``

#### Defined in

[middleware/typesV2.ts:24512](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24512)

___

### Offence

• **Offence** = ``"Offence"``

#### Defined in

[middleware/typesV2.ts:24513](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24513)

___

### OldSlashingReportDiscarded

• **OldSlashingReportDiscarded** = ``"OldSlashingReportDiscarded"``

#### Defined in

[middleware/typesV2.ts:24514](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24514)

___

### Paused

• **Paused** = ``"Paused"``

#### Defined in

[middleware/typesV2.ts:24515](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24515)

___

### PendingPipExpiryChanged

• **PendingPipExpiryChanged** = ``"PendingPipExpiryChanged"``

#### Defined in

[middleware/typesV2.ts:24516](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24516)

___

### PermissionedIdentityAdded

• **PermissionedIdentityAdded** = ``"PermissionedIdentityAdded"``

#### Defined in

[middleware/typesV2.ts:24517](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24517)

___

### PermissionedIdentityRemoved

• **PermissionedIdentityRemoved** = ``"PermissionedIdentityRemoved"``

#### Defined in

[middleware/typesV2.ts:24518](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24518)

___

### PermissionedValidatorAdded

• **PermissionedValidatorAdded** = ``"PermissionedValidatorAdded"``

#### Defined in

[middleware/typesV2.ts:24519](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24519)

___

### PermissionedValidatorRemoved

• **PermissionedValidatorRemoved** = ``"PermissionedValidatorRemoved"``

#### Defined in

[middleware/typesV2.ts:24520](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24520)

___

### PermissionedValidatorStatusChanged

• **PermissionedValidatorStatusChanged** = ``"PermissionedValidatorStatusChanged"``

#### Defined in

[middleware/typesV2.ts:24521](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24521)

___

### PipClosed

• **PipClosed** = ``"PipClosed"``

#### Defined in

[middleware/typesV2.ts:24522](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24522)

___

### PipSkipped

• **PipSkipped** = ``"PipSkipped"``

#### Defined in

[middleware/typesV2.ts:24523](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24523)

___

### PortfolioCreated

• **PortfolioCreated** = ``"PortfolioCreated"``

#### Defined in

[middleware/typesV2.ts:24524](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24524)

___

### PortfolioCustodianChanged

• **PortfolioCustodianChanged** = ``"PortfolioCustodianChanged"``

#### Defined in

[middleware/typesV2.ts:24525](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24525)

___

### PortfolioDeleted

• **PortfolioDeleted** = ``"PortfolioDeleted"``

#### Defined in

[middleware/typesV2.ts:24526](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24526)

___

### PortfolioRenamed

• **PortfolioRenamed** = ``"PortfolioRenamed"``

#### Defined in

[middleware/typesV2.ts:24527](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24527)

___

### PrimaryIssuanceAgentTransfered

• **PrimaryIssuanceAgentTransfered** = ``"PrimaryIssuanceAgentTransfered"``

#### Defined in

[middleware/typesV2.ts:24528](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24528)

___

### PrimaryIssuanceAgentTransferred

• **PrimaryIssuanceAgentTransferred** = ``"PrimaryIssuanceAgentTransferred"``

#### Defined in

[middleware/typesV2.ts:24529](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24529)

___

### PrimaryKeyUpdated

• **PrimaryKeyUpdated** = ``"PrimaryKeyUpdated"``

#### Defined in

[middleware/typesV2.ts:24530](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24530)

___

### ProposalAdded

• **ProposalAdded** = ``"ProposalAdded"``

#### Defined in

[middleware/typesV2.ts:24531](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24531)

___

### ProposalApproved

• **ProposalApproved** = ``"ProposalApproved"``

#### Defined in

[middleware/typesV2.ts:24532](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24532)

___

### ProposalBondAdjusted

• **ProposalBondAdjusted** = ``"ProposalBondAdjusted"``

#### Defined in

[middleware/typesV2.ts:24533](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24533)

___

### ProposalCoolOffPeriodChanged

• **ProposalCoolOffPeriodChanged** = ``"ProposalCoolOffPeriodChanged"``

#### Defined in

[middleware/typesV2.ts:24534](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24534)

___

### ProposalCreated

• **ProposalCreated** = ``"ProposalCreated"``

#### Defined in

[middleware/typesV2.ts:24535](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24535)

___

### ProposalDetailsAmended

• **ProposalDetailsAmended** = ``"ProposalDetailsAmended"``

#### Defined in

[middleware/typesV2.ts:24536](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24536)

___

### ProposalDurationChanged

• **ProposalDurationChanged** = ``"ProposalDurationChanged"``

#### Defined in

[middleware/typesV2.ts:24537](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24537)

___

### ProposalExecuted

• **ProposalExecuted** = ``"ProposalExecuted"``

#### Defined in

[middleware/typesV2.ts:24538](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24538)

___

### ProposalExecutionFailed

• **ProposalExecutionFailed** = ``"ProposalExecutionFailed"``

#### Defined in

[middleware/typesV2.ts:24539](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24539)

___

### ProposalRefund

• **ProposalRefund** = ``"ProposalRefund"``

#### Defined in

[middleware/typesV2.ts:24540](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24540)

___

### ProposalRejected

• **ProposalRejected** = ``"ProposalRejected"``

#### Defined in

[middleware/typesV2.ts:24541](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24541)

___

### ProposalRejectionVote

• **ProposalRejectionVote** = ``"ProposalRejectionVote"``

#### Defined in

[middleware/typesV2.ts:24542](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24542)

___

### ProposalStateUpdated

• **ProposalStateUpdated** = ``"ProposalStateUpdated"``

#### Defined in

[middleware/typesV2.ts:24543](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24543)

___

### Proposed

• **Proposed** = ``"Proposed"``

#### Defined in

[middleware/typesV2.ts:24544](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24544)

___

### PutCodeFlagChanged

• **PutCodeFlagChanged** = ``"PutCodeFlagChanged"``

#### Defined in

[middleware/typesV2.ts:24545](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24545)

___

### QuorumThresholdChanged

• **QuorumThresholdChanged** = ``"QuorumThresholdChanged"``

#### Defined in

[middleware/typesV2.ts:24546](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24546)

___

### RangeChanged

• **RangeChanged** = ``"RangeChanged"``

#### Defined in

[middleware/typesV2.ts:24548](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24548)

___

### RangeProofAdded

• **RangeProofAdded** = ``"RangeProofAdded"``

#### Defined in

[middleware/typesV2.ts:24549](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24549)

___

### RangeProofVerified

• **RangeProofVerified** = ``"RangeProofVerified"``

#### Defined in

[middleware/typesV2.ts:24550](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24550)

___

### RcvChanged

• **RcvChanged** = ``"RCVChanged"``

#### Defined in

[middleware/typesV2.ts:24547](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24547)

___

### ReceiptClaimed

• **ReceiptClaimed** = ``"ReceiptClaimed"``

#### Defined in

[middleware/typesV2.ts:24551](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24551)

___

### ReceiptUnclaimed

• **ReceiptUnclaimed** = ``"ReceiptUnclaimed"``

#### Defined in

[middleware/typesV2.ts:24552](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24552)

___

### ReceiptValidityChanged

• **ReceiptValidityChanged** = ``"ReceiptValidityChanged"``

#### Defined in

[middleware/typesV2.ts:24553](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24553)

___

### Reclaimed

• **Reclaimed** = ``"Reclaimed"``

#### Defined in

[middleware/typesV2.ts:24554](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24554)

___

### RecordDateChanged

• **RecordDateChanged** = ``"RecordDateChanged"``

#### Defined in

[middleware/typesV2.ts:24555](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24555)

___

### Redeemed

• **Redeemed** = ``"Redeemed"``

#### Defined in

[middleware/typesV2.ts:24556](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24556)

___

### ReferendumCreated

• **ReferendumCreated** = ``"ReferendumCreated"``

#### Defined in

[middleware/typesV2.ts:24557](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24557)

___

### ReferendumScheduled

• **ReferendumScheduled** = ``"ReferendumScheduled"``

#### Defined in

[middleware/typesV2.ts:24558](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24558)

___

### ReferendumStateUpdated

• **ReferendumStateUpdated** = ``"ReferendumStateUpdated"``

#### Defined in

[middleware/typesV2.ts:24559](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24559)

___

### RegisterAssetMetadataGlobalType

• **RegisterAssetMetadataGlobalType** = ``"RegisterAssetMetadataGlobalType"``

#### Defined in

[middleware/typesV2.ts:24560](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24560)

___

### RegisterAssetMetadataLocalType

• **RegisterAssetMetadataLocalType** = ``"RegisterAssetMetadataLocalType"``

#### Defined in

[middleware/typesV2.ts:24561](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24561)

___

### Rejected

• **Rejected** = ``"Rejected"``

#### Defined in

[middleware/typesV2.ts:24562](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24562)

___

### ReleaseCoordinatorUpdated

• **ReleaseCoordinatorUpdated** = ``"ReleaseCoordinatorUpdated"``

#### Defined in

[middleware/typesV2.ts:24563](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24563)

___

### Remarked

• **Remarked** = ``"Remarked"``

#### Defined in

[middleware/typesV2.ts:24564](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24564)

___

### Removed

• **Removed** = ``"Removed"``

#### Defined in

[middleware/typesV2.ts:24565](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24565)

___

### RemovedPayingKey

• **RemovedPayingKey** = ``"RemovedPayingKey"``

#### Defined in

[middleware/typesV2.ts:24566](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24566)

___

### Requested

• **Requested** = ``"Requested"``

#### Defined in

[middleware/typesV2.ts:24567](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24567)

___

### ReserveRepatriated

• **ReserveRepatriated** = ``"ReserveRepatriated"``

#### Defined in

[middleware/typesV2.ts:24568](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24568)

___

### Reserved

• **Reserved** = ``"Reserved"``

#### Defined in

[middleware/typesV2.ts:24569](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24569)

___

### Restored

• **Restored** = ``"Restored"``

#### Defined in

[middleware/typesV2.ts:24570](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24570)

___

### Resumed

• **Resumed** = ``"Resumed"``

#### Defined in

[middleware/typesV2.ts:24571](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24571)

___

### Reward

• **Reward** = ``"Reward"``

#### Defined in

[middleware/typesV2.ts:24572](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24572)

___

### RewardPaymentSchedulingInterrupted

• **RewardPaymentSchedulingInterrupted** = ``"RewardPaymentSchedulingInterrupted"``

#### Defined in

[middleware/typesV2.ts:24573](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24573)

___

### ScheduleCreated

• **ScheduleCreated** = ``"ScheduleCreated"``

#### Defined in

[middleware/typesV2.ts:24574](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24574)

___

### ScheduleRemoved

• **ScheduleRemoved** = ``"ScheduleRemoved"``

#### Defined in

[middleware/typesV2.ts:24575](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24575)

___

### ScheduleUpdated

• **ScheduleUpdated** = ``"ScheduleUpdated"``

#### Defined in

[middleware/typesV2.ts:24576](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24576)

___

### Scheduled

• **Scheduled** = ``"Scheduled"``

#### Defined in

[middleware/typesV2.ts:24577](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24577)

___

### SchedulingFailed

• **SchedulingFailed** = ``"SchedulingFailed"``

#### Defined in

[middleware/typesV2.ts:24578](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24578)

___

### SecondaryKeyLeftIdentity

• **SecondaryKeyLeftIdentity** = ``"SecondaryKeyLeftIdentity"``

#### Defined in

[middleware/typesV2.ts:24579](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24579)

___

### SecondaryKeyPermissionsUpdated

• **SecondaryKeyPermissionsUpdated** = ``"SecondaryKeyPermissionsUpdated"``

#### Defined in

[middleware/typesV2.ts:24580](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24580)

___

### SecondaryKeysAdded

• **SecondaryKeysAdded** = ``"SecondaryKeysAdded"``

#### Defined in

[middleware/typesV2.ts:24581](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24581)

___

### SecondaryKeysFrozen

• **SecondaryKeysFrozen** = ``"SecondaryKeysFrozen"``

#### Defined in

[middleware/typesV2.ts:24582](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24582)

___

### SecondaryKeysRemoved

• **SecondaryKeysRemoved** = ``"SecondaryKeysRemoved"``

#### Defined in

[middleware/typesV2.ts:24583](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24583)

___

### SecondaryKeysUnfrozen

• **SecondaryKeysUnfrozen** = ``"SecondaryKeysUnfrozen"``

#### Defined in

[middleware/typesV2.ts:24584](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24584)

___

### SecondaryPermissionsUpdated

• **SecondaryPermissionsUpdated** = ``"SecondaryPermissionsUpdated"``

#### Defined in

[middleware/typesV2.ts:24585](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24585)

___

### SetAssetMetadataValue

• **SetAssetMetadataValue** = ``"SetAssetMetadataValue"``

#### Defined in

[middleware/typesV2.ts:24586](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24586)

___

### SetAssetMetadataValueDetails

• **SetAssetMetadataValueDetails** = ``"SetAssetMetadataValueDetails"``

#### Defined in

[middleware/typesV2.ts:24587](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24587)

___

### SetAssetTransferCompliance

• **SetAssetTransferCompliance** = ``"SetAssetTransferCompliance"``

#### Defined in

[middleware/typesV2.ts:24588](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24588)

___

### SettlementManuallyExecuted

• **SettlementManuallyExecuted** = ``"SettlementManuallyExecuted"``

#### Defined in

[middleware/typesV2.ts:24589](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24589)

___

### SignerLeft

• **SignerLeft** = ``"SignerLeft"``

#### Defined in

[middleware/typesV2.ts:24590](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24590)

___

### SigningKeysAdded

• **SigningKeysAdded** = ``"SigningKeysAdded"``

#### Defined in

[middleware/typesV2.ts:24591](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24591)

___

### SigningKeysFrozen

• **SigningKeysFrozen** = ``"SigningKeysFrozen"``

#### Defined in

[middleware/typesV2.ts:24592](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24592)

___

### SigningKeysRemoved

• **SigningKeysRemoved** = ``"SigningKeysRemoved"``

#### Defined in

[middleware/typesV2.ts:24593](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24593)

___

### SigningKeysUnfrozen

• **SigningKeysUnfrozen** = ``"SigningKeysUnfrozen"``

#### Defined in

[middleware/typesV2.ts:24594](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24594)

___

### SigningPermissionsUpdated

• **SigningPermissionsUpdated** = ``"SigningPermissionsUpdated"``

#### Defined in

[middleware/typesV2.ts:24595](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24595)

___

### Slash

• **Slash** = ``"Slash"``

#### Defined in

[middleware/typesV2.ts:24596](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24596)

___

### SlashingAllowedForChanged

• **SlashingAllowedForChanged** = ``"SlashingAllowedForChanged"``

#### Defined in

[middleware/typesV2.ts:24597](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24597)

___

### SlashingParamsUpdated

• **SlashingParamsUpdated** = ``"SlashingParamsUpdated"``

#### Defined in

[middleware/typesV2.ts:24598](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24598)

___

### SnapshotCleared

• **SnapshotCleared** = ``"SnapshotCleared"``

#### Defined in

[middleware/typesV2.ts:24599](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24599)

___

### SnapshotResultsEnacted

• **SnapshotResultsEnacted** = ``"SnapshotResultsEnacted"``

#### Defined in

[middleware/typesV2.ts:24600](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24600)

___

### SnapshotTaken

• **SnapshotTaken** = ``"SnapshotTaken"``

#### Defined in

[middleware/typesV2.ts:24601](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24601)

___

### SolutionStored

• **SolutionStored** = ``"SolutionStored"``

#### Defined in

[middleware/typesV2.ts:24602](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24602)

___

### SomeOffline

• **SomeOffline** = ``"SomeOffline"``

#### Defined in

[middleware/typesV2.ts:24603](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24603)

___

### StakingElection

• **StakingElection** = ``"StakingElection"``

#### Defined in

[middleware/typesV2.ts:24604](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24604)

___

### StatTypesAdded

• **StatTypesAdded** = ``"StatTypesAdded"``

#### Defined in

[middleware/typesV2.ts:24605](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24605)

___

### StatTypesRemoved

• **StatTypesRemoved** = ``"StatTypesRemoved"``

#### Defined in

[middleware/typesV2.ts:24606](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24606)

___

### Sudid

• **Sudid** = ``"Sudid"``

#### Defined in

[middleware/typesV2.ts:24607](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24607)

___

### SudoAsDone

• **SudoAsDone** = ``"SudoAsDone"``

#### Defined in

[middleware/typesV2.ts:24608](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24608)

___

### TemplateInstantiationFeeChanged

• **TemplateInstantiationFeeChanged** = ``"TemplateInstantiationFeeChanged"``

#### Defined in

[middleware/typesV2.ts:24609](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24609)

___

### TemplateMetaUrlChanged

• **TemplateMetaUrlChanged** = ``"TemplateMetaUrlChanged"``

#### Defined in

[middleware/typesV2.ts:24610](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24610)

___

### TemplateOwnershipTransferred

• **TemplateOwnershipTransferred** = ``"TemplateOwnershipTransferred"``

#### Defined in

[middleware/typesV2.ts:24611](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24611)

___

### TemplateUsageFeeChanged

• **TemplateUsageFeeChanged** = ``"TemplateUsageFeeChanged"``

#### Defined in

[middleware/typesV2.ts:24612](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24612)

___

### Terminated

• **Terminated** = ``"Terminated"``

#### Defined in

[middleware/typesV2.ts:24613](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24613)

___

### TickerRegistered

• **TickerRegistered** = ``"TickerRegistered"``

#### Defined in

[middleware/typesV2.ts:24614](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24614)

___

### TickerTransferred

• **TickerTransferred** = ``"TickerTransferred"``

#### Defined in

[middleware/typesV2.ts:24615](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24615)

___

### TimelockChanged

• **TimelockChanged** = ``"TimelockChanged"``

#### Defined in

[middleware/typesV2.ts:24616](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24616)

___

### Transfer

• **Transfer** = ``"Transfer"``

#### Defined in

[middleware/typesV2.ts:24617](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24617)

___

### TransferConditionExemptionsAdded

• **TransferConditionExemptionsAdded** = ``"TransferConditionExemptionsAdded"``

#### Defined in

[middleware/typesV2.ts:24618](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24618)

___

### TransferConditionExemptionsRemoved

• **TransferConditionExemptionsRemoved** = ``"TransferConditionExemptionsRemoved"``

#### Defined in

[middleware/typesV2.ts:24619](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24619)

___

### TransferManagerAdded

• **TransferManagerAdded** = ``"TransferManagerAdded"``

#### Defined in

[middleware/typesV2.ts:24620](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24620)

___

### TransferManagerRemoved

• **TransferManagerRemoved** = ``"TransferManagerRemoved"``

#### Defined in

[middleware/typesV2.ts:24621](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24621)

___

### TransferWithData

• **TransferWithData** = ``"TransferWithData"``

#### Defined in

[middleware/typesV2.ts:24622](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24622)

___

### TreasuryDidSet

• **TreasuryDidSet** = ``"TreasuryDidSet"``

#### Defined in

[middleware/typesV2.ts:24623](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24623)

___

### TreasuryDisbursement

• **TreasuryDisbursement** = ``"TreasuryDisbursement"``

#### Defined in

[middleware/typesV2.ts:24624](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24624)

___

### TreasuryDisbursementFailed

• **TreasuryDisbursementFailed** = ``"TreasuryDisbursementFailed"``

#### Defined in

[middleware/typesV2.ts:24625](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24625)

___

### TreasuryReimbursement

• **TreasuryReimbursement** = ``"TreasuryReimbursement"``

#### Defined in

[middleware/typesV2.ts:24626](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24626)

___

### TrustedDefaultClaimIssuerAdded

• **TrustedDefaultClaimIssuerAdded** = ``"TrustedDefaultClaimIssuerAdded"``

#### Defined in

[middleware/typesV2.ts:24627](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24627)

___

### TrustedDefaultClaimIssuerRemoved

• **TrustedDefaultClaimIssuerRemoved** = ``"TrustedDefaultClaimIssuerRemoved"``

#### Defined in

[middleware/typesV2.ts:24628](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24628)

___

### TxRemoved

• **TxRemoved** = ``"TxRemoved"``

#### Defined in

[middleware/typesV2.ts:24629](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24629)

___

### TxsHandled

• **TxsHandled** = ``"TxsHandled"``

#### Defined in

[middleware/typesV2.ts:24630](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24630)

___

### Unbonded

• **Unbonded** = ``"Unbonded"``

#### Defined in

[middleware/typesV2.ts:24631](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24631)

___

### UnexpectedError

• **UnexpectedError** = ``"UnexpectedError"``

#### Defined in

[middleware/typesV2.ts:24632](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24632)

___

### Unfrozen

• **Unfrozen** = ``"Unfrozen"``

#### Defined in

[middleware/typesV2.ts:24633](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24633)

___

### UnfrozenTx

• **UnfrozenTx** = ``"UnfrozenTx"``

#### Defined in

[middleware/typesV2.ts:24634](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24634)

___

### Unreserved

• **Unreserved** = ``"Unreserved"``

#### Defined in

[middleware/typesV2.ts:24635](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24635)

___

### UpdatedPolyxLimit

• **UpdatedPolyxLimit** = ``"UpdatedPolyxLimit"``

#### Defined in

[middleware/typesV2.ts:24636](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24636)

___

### UserPortfolios

• **UserPortfolios** = ``"UserPortfolios"``

#### Defined in

[middleware/typesV2.ts:24637](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24637)

___

### VenueCreated

• **VenueCreated** = ``"VenueCreated"``

#### Defined in

[middleware/typesV2.ts:24638](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24638)

___

### VenueDetailsUpdated

• **VenueDetailsUpdated** = ``"VenueDetailsUpdated"``

#### Defined in

[middleware/typesV2.ts:24639](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24639)

___

### VenueFiltering

• **VenueFiltering** = ``"VenueFiltering"``

#### Defined in

[middleware/typesV2.ts:24640](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24640)

___

### VenueSignersUpdated

• **VenueSignersUpdated** = ``"VenueSignersUpdated"``

#### Defined in

[middleware/typesV2.ts:24641](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24641)

___

### VenueTypeUpdated

• **VenueTypeUpdated** = ``"VenueTypeUpdated"``

#### Defined in

[middleware/typesV2.ts:24642](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24642)

___

### VenueUnauthorized

• **VenueUnauthorized** = ``"VenueUnauthorized"``

#### Defined in

[middleware/typesV2.ts:24643](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24643)

___

### VenueUpdated

• **VenueUpdated** = ``"VenueUpdated"``

#### Defined in

[middleware/typesV2.ts:24644](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24644)

___

### VenuesAllowed

• **VenuesAllowed** = ``"VenuesAllowed"``

#### Defined in

[middleware/typesV2.ts:24645](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24645)

___

### VenuesBlocked

• **VenuesBlocked** = ``"VenuesBlocked"``

#### Defined in

[middleware/typesV2.ts:24646](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24646)

___

### VoteCast

• **VoteCast** = ``"VoteCast"``

#### Defined in

[middleware/typesV2.ts:24647](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24647)

___

### VoteEnactReferendum

• **VoteEnactReferendum** = ``"VoteEnactReferendum"``

#### Defined in

[middleware/typesV2.ts:24648](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24648)

___

### VoteRejectReferendum

• **VoteRejectReferendum** = ``"VoteRejectReferendum"``

#### Defined in

[middleware/typesV2.ts:24649](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24649)

___

### VoteRetracted

• **VoteRetracted** = ``"VoteRetracted"``

#### Defined in

[middleware/typesV2.ts:24650](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24650)

___

### VoteThresholdUpdated

• **VoteThresholdUpdated** = ``"VoteThresholdUpdated"``

#### Defined in

[middleware/typesV2.ts:24651](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24651)

___

### Voted

• **Voted** = ``"Voted"``

#### Defined in

[middleware/typesV2.ts:24652](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24652)

___

### Withdrawn

• **Withdrawn** = ``"Withdrawn"``

#### Defined in

[middleware/typesV2.ts:24653](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/middleware/typesV2.ts#L24653)
