sdk-docs_versioned_docs/version-20.1.x/enums/Types/PublicEnum8F5A39C8Ee/PublicEnum8F5A39C8Ee.md
---
id: "PublicEnum8F5A39C8Ee"
title: "Enumeration: PublicEnum8F5A39C8Ee"
sidebar_label: "PublicEnum8F5A39C8Ee"
---

[types](../../../modules/Types/Types.md).PublicEnum8F5A39C8Ee

**`Enum Name`**

 EventIdEnum
 Events are emitted when chain state is changed. This enum represents all known events

## Enumeration Members

### AcceptedPayingKey

• **AcceptedPayingKey** = ``"AcceptedPayingKey"``

#### Defined in

[middleware/typesV2.ts:27183](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27183)

___

### AccountBalanceBurned

• **AccountBalanceBurned** = ``"AccountBalanceBurned"``

#### Defined in

[middleware/typesV2.ts:27184](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27184)

___

### ActiveLimitChanged

• **ActiveLimitChanged** = ``"ActiveLimitChanged"``

#### Defined in

[middleware/typesV2.ts:27185](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27185)

___

### ActivePipLimitChanged

• **ActivePipLimitChanged** = ``"ActivePipLimitChanged"``

#### Defined in

[middleware/typesV2.ts:27186](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27186)

___

### AdminChanged

• **AdminChanged** = ``"AdminChanged"``

#### Defined in

[middleware/typesV2.ts:27187](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27187)

___

### AffirmationWithdrawn

• **AffirmationWithdrawn** = ``"AffirmationWithdrawn"``

#### Defined in

[middleware/typesV2.ts:27188](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27188)

___

### AgentAdded

• **AgentAdded** = ``"AgentAdded"``

#### Defined in

[middleware/typesV2.ts:27189](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27189)

___

### AgentRemoved

• **AgentRemoved** = ``"AgentRemoved"``

#### Defined in

[middleware/typesV2.ts:27190](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27190)

___

### AllGood

• **AllGood** = ``"AllGood"``

#### Defined in

[middleware/typesV2.ts:27191](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27191)

___

### Approval

• **Approval** = ``"Approval"``

#### Defined in

[middleware/typesV2.ts:27192](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27192)

___

### Approved

• **Approved** = ``"Approved"``

#### Defined in

[middleware/typesV2.ts:27193](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27193)

___

### AssetCompliancePaused

• **AssetCompliancePaused** = ``"AssetCompliancePaused"``

#### Defined in

[middleware/typesV2.ts:27194](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27194)

___

### AssetComplianceReplaced

• **AssetComplianceReplaced** = ``"AssetComplianceReplaced"``

#### Defined in

[middleware/typesV2.ts:27195](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27195)

___

### AssetComplianceReset

• **AssetComplianceReset** = ``"AssetComplianceReset"``

#### Defined in

[middleware/typesV2.ts:27196](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27196)

___

### AssetComplianceResumed

• **AssetComplianceResumed** = ``"AssetComplianceResumed"``

#### Defined in

[middleware/typesV2.ts:27197](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27197)

___

### AssetCreated

• **AssetCreated** = ``"AssetCreated"``

#### Defined in

[middleware/typesV2.ts:27198](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27198)

___

### AssetDidRegistered

• **AssetDidRegistered** = ``"AssetDidRegistered"``

#### Defined in

[middleware/typesV2.ts:27199](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27199)

___

### AssetFrozen

• **AssetFrozen** = ``"AssetFrozen"``

#### Defined in

[middleware/typesV2.ts:27200](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27200)

___

### AssetOwnershipTransferred

• **AssetOwnershipTransferred** = ``"AssetOwnershipTransferred"``

#### Defined in

[middleware/typesV2.ts:27201](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27201)

___

### AssetPurchased

• **AssetPurchased** = ``"AssetPurchased"``

#### Defined in

[middleware/typesV2.ts:27202](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27202)

___

### AssetRenamed

• **AssetRenamed** = ``"AssetRenamed"``

#### Defined in

[middleware/typesV2.ts:27203](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27203)

___

### AssetRuleChanged

• **AssetRuleChanged** = ``"AssetRuleChanged"``

#### Defined in

[middleware/typesV2.ts:27204](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27204)

___

### AssetRuleRemoved

• **AssetRuleRemoved** = ``"AssetRuleRemoved"``

#### Defined in

[middleware/typesV2.ts:27205](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27205)

___

### AssetRulesPaused

• **AssetRulesPaused** = ``"AssetRulesPaused"``

#### Defined in

[middleware/typesV2.ts:27206](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27206)

___

### AssetRulesReplaced

• **AssetRulesReplaced** = ``"AssetRulesReplaced"``

#### Defined in

[middleware/typesV2.ts:27207](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27207)

___

### AssetRulesReset

• **AssetRulesReset** = ``"AssetRulesReset"``

#### Defined in

[middleware/typesV2.ts:27208](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27208)

___

### AssetRulesResumed

• **AssetRulesResumed** = ``"AssetRulesResumed"``

#### Defined in

[middleware/typesV2.ts:27209](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27209)

___

### AssetStatsUpdated

• **AssetStatsUpdated** = ``"AssetStatsUpdated"``

#### Defined in

[middleware/typesV2.ts:27210](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27210)

___

### AssetTypeChanged

• **AssetTypeChanged** = ``"AssetTypeChanged"``

#### Defined in

[middleware/typesV2.ts:27211](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27211)

___

### AssetUnfrozen

• **AssetUnfrozen** = ``"AssetUnfrozen"``

#### Defined in

[middleware/typesV2.ts:27212](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27212)

___

### AuthorizationAdded

• **AuthorizationAdded** = ``"AuthorizationAdded"``

#### Defined in

[middleware/typesV2.ts:27213](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27213)

___

### AuthorizationConsumed

• **AuthorizationConsumed** = ``"AuthorizationConsumed"``

#### Defined in

[middleware/typesV2.ts:27214](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27214)

___

### AuthorizationRejected

• **AuthorizationRejected** = ``"AuthorizationRejected"``

#### Defined in

[middleware/typesV2.ts:27215](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27215)

___

### AuthorizationRetryLimitReached

• **AuthorizationRetryLimitReached** = ``"AuthorizationRetryLimitReached"``

#### Defined in

[middleware/typesV2.ts:27216](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27216)

___

### AuthorizationRevoked

• **AuthorizationRevoked** = ``"AuthorizationRevoked"``

#### Defined in

[middleware/typesV2.ts:27217](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27217)

___

### AuthorizedPayingKey

• **AuthorizedPayingKey** = ``"AuthorizedPayingKey"``

#### Defined in

[middleware/typesV2.ts:27218](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27218)

___

### BalanceSet

• **BalanceSet** = ``"BalanceSet"``

#### Defined in

[middleware/typesV2.ts:27219](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27219)

___

### BallotCancelled

• **BallotCancelled** = ``"BallotCancelled"``

#### Defined in

[middleware/typesV2.ts:27220](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27220)

___

### BallotCreated

• **BallotCreated** = ``"BallotCreated"``

#### Defined in

[middleware/typesV2.ts:27221](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27221)

___

### BatchCompleted

• **BatchCompleted** = ``"BatchCompleted"``

#### Defined in

[middleware/typesV2.ts:27222](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27222)

___

### BatchInterrupted

• **BatchInterrupted** = ``"BatchInterrupted"``

#### Defined in

[middleware/typesV2.ts:27223](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27223)

___

### BatchOptimisticFailed

• **BatchOptimisticFailed** = ``"BatchOptimisticFailed"``

#### Defined in

[middleware/typesV2.ts:27224](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27224)

___

### BenefitClaimed

• **BenefitClaimed** = ``"BenefitClaimed"``

#### Defined in

[middleware/typesV2.ts:27225](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27225)

___

### Bonded

• **Bonded** = ``"Bonded"``

#### Defined in

[middleware/typesV2.ts:27226](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27226)

___

### BridgeLimitUpdated

• **BridgeLimitUpdated** = ``"BridgeLimitUpdated"``

#### Defined in

[middleware/typesV2.ts:27227](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27227)

___

### BridgeTxFailed

• **BridgeTxFailed** = ``"BridgeTxFailed"``

#### Defined in

[middleware/typesV2.ts:27228](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27228)

___

### BridgeTxScheduleFailed

• **BridgeTxScheduleFailed** = ``"BridgeTxScheduleFailed"``

#### Defined in

[middleware/typesV2.ts:27229](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27229)

___

### BridgeTxScheduled

• **BridgeTxScheduled** = ``"BridgeTxScheduled"``

#### Defined in

[middleware/typesV2.ts:27230](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27230)

___

### Bridged

• **Bridged** = ``"Bridged"``

#### Defined in

[middleware/typesV2.ts:27231](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27231)

___

### CaInitiated

• **CaInitiated** = ``"CAInitiated"``

#### Defined in

[middleware/typesV2.ts:27233](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27233)

___

### CaLinkedToDoc

• **CaLinkedToDoc** = ``"CALinkedToDoc"``

#### Defined in

[middleware/typesV2.ts:27234](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27234)

___

### CaRemoved

• **CaRemoved** = ``"CARemoved"``

#### Defined in

[middleware/typesV2.ts:27235](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27235)

___

### CaaTransferred

• **CaaTransferred** = ``"CAATransferred"``

#### Defined in

[middleware/typesV2.ts:27232](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27232)

___

### CallLookupFailed

• **CallLookupFailed** = ``"CallLookupFailed"``

#### Defined in

[middleware/typesV2.ts:27236](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27236)

___

### CallUnavailable

• **CallUnavailable** = ``"CallUnavailable"``

#### Defined in

[middleware/typesV2.ts:27237](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27237)

___

### Called

• **Called** = ``"Called"``

#### Defined in

[middleware/typesV2.ts:27238](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27238)

___

### Canceled

• **Canceled** = ``"Canceled"``

#### Defined in

[middleware/typesV2.ts:27239](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27239)

___

### CddClaimsInvalidated

• **CddClaimsInvalidated** = ``"CddClaimsInvalidated"``

#### Defined in

[middleware/typesV2.ts:27240](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27240)

___

### CddRequirementForMasterKeyUpdated

• **CddRequirementForMasterKeyUpdated** = ``"CddRequirementForMasterKeyUpdated"``

#### Defined in

[middleware/typesV2.ts:27241](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27241)

___

### CddRequirementForPrimaryKeyUpdated

• **CddRequirementForPrimaryKeyUpdated** = ``"CddRequirementForPrimaryKeyUpdated"``

#### Defined in

[middleware/typesV2.ts:27242](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27242)

___

### CddStatus

• **CddStatus** = ``"CddStatus"``

#### Defined in

[middleware/typesV2.ts:27243](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27243)

___

### CheckpointCreated

• **CheckpointCreated** = ``"CheckpointCreated"``

#### Defined in

[middleware/typesV2.ts:27244](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27244)

___

### ClaimAdded

• **ClaimAdded** = ``"ClaimAdded"``

#### Defined in

[middleware/typesV2.ts:27245](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27245)

___

### ClaimRevoked

• **ClaimRevoked** = ``"ClaimRevoked"``

#### Defined in

[middleware/typesV2.ts:27246](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27246)

___

### ClassicTickerClaimed

• **ClassicTickerClaimed** = ``"ClassicTickerClaimed"``

#### Defined in

[middleware/typesV2.ts:27247](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27247)

___

### Cleared

• **Cleared** = ``"Cleared"``

#### Defined in

[middleware/typesV2.ts:27248](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27248)

___

### Closed

• **Closed** = ``"Closed"``

#### Defined in

[middleware/typesV2.ts:27249](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27249)

___

### CodeRemoved

• **CodeRemoved** = ``"CodeRemoved"``

#### Defined in

[middleware/typesV2.ts:27250](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27250)

___

### CodeStored

• **CodeStored** = ``"CodeStored"``

#### Defined in

[middleware/typesV2.ts:27251](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27251)

___

### CodeUpdated

• **CodeUpdated** = ``"CodeUpdated"``

#### Defined in

[middleware/typesV2.ts:27252](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27252)

___

### CoefficientSet

• **CoefficientSet** = ``"CoefficientSet"``

#### Defined in

[middleware/typesV2.ts:27253](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27253)

___

### CommissionCapUpdated

• **CommissionCapUpdated** = ``"CommissionCapUpdated"``

#### Defined in

[middleware/typesV2.ts:27254](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27254)

___

### ComplianceRequirementChanged

• **ComplianceRequirementChanged** = ``"ComplianceRequirementChanged"``

#### Defined in

[middleware/typesV2.ts:27255](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27255)

___

### ComplianceRequirementCreated

• **ComplianceRequirementCreated** = ``"ComplianceRequirementCreated"``

#### Defined in

[middleware/typesV2.ts:27256](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27256)

___

### ComplianceRequirementRemoved

• **ComplianceRequirementRemoved** = ``"ComplianceRequirementRemoved"``

#### Defined in

[middleware/typesV2.ts:27257](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27257)

___

### ContractCodeUpdated

• **ContractCodeUpdated** = ``"ContractCodeUpdated"``

#### Defined in

[middleware/typesV2.ts:27258](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27258)

___

### ContractEmitted

• **ContractEmitted** = ``"ContractEmitted"``

#### Defined in

[middleware/typesV2.ts:27259](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27259)

___

### ContractExecution

• **ContractExecution** = ``"ContractExecution"``

#### Defined in

[middleware/typesV2.ts:27260](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27260)

___

### ControllerChanged

• **ControllerChanged** = ``"ControllerChanged"``

#### Defined in

[middleware/typesV2.ts:27261](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27261)

___

### ControllerRedemption

• **ControllerRedemption** = ``"ControllerRedemption"``

#### Defined in

[middleware/typesV2.ts:27262](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27262)

___

### ControllerTransfer

• **ControllerTransfer** = ``"ControllerTransfer"``

#### Defined in

[middleware/typesV2.ts:27263](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27263)

___

### Created

• **Created** = ``"Created"``

#### Defined in

[middleware/typesV2.ts:27264](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27264)

___

### CustodyAllowanceChanged

• **CustodyAllowanceChanged** = ``"CustodyAllowanceChanged"``

#### Defined in

[middleware/typesV2.ts:27265](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27265)

___

### CustodyTransfer

• **CustodyTransfer** = ``"CustodyTransfer"``

#### Defined in

[middleware/typesV2.ts:27266](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27266)

___

### CustomAssetTypeExists

• **CustomAssetTypeExists** = ``"CustomAssetTypeExists"``

#### Defined in

[middleware/typesV2.ts:27267](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27267)

___

### CustomAssetTypeRegistered

• **CustomAssetTypeRegistered** = ``"CustomAssetTypeRegistered"``

#### Defined in

[middleware/typesV2.ts:27268](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27268)

___

### CustomClaimTypeAdded

• **CustomClaimTypeAdded** = ``"CustomClaimTypeAdded"``

#### Defined in

[middleware/typesV2.ts:27269](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27269)

___

### DefaultEnactmentPeriodChanged

• **DefaultEnactmentPeriodChanged** = ``"DefaultEnactmentPeriodChanged"``

#### Defined in

[middleware/typesV2.ts:27270](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27270)

___

### DefaultTargetIdentitiesChanged

• **DefaultTargetIdentitiesChanged** = ``"DefaultTargetIdentitiesChanged"``

#### Defined in

[middleware/typesV2.ts:27271](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27271)

___

### DefaultWithholdingTaxChanged

• **DefaultWithholdingTaxChanged** = ``"DefaultWithholdingTaxChanged"``

#### Defined in

[middleware/typesV2.ts:27272](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27272)

___

### DelegateCalled

• **DelegateCalled** = ``"DelegateCalled"``

#### Defined in

[middleware/typesV2.ts:27273](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27273)

___

### DidCreated

• **DidCreated** = ``"DidCreated"``

#### Defined in

[middleware/typesV2.ts:27274](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27274)

___

### DidStatus

• **DidStatus** = ``"DidStatus"``

#### Defined in

[middleware/typesV2.ts:27275](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27275)

___

### DidWithholdingTaxChanged

• **DidWithholdingTaxChanged** = ``"DidWithholdingTaxChanged"``

#### Defined in

[middleware/typesV2.ts:27276](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27276)

___

### Dispatched

• **Dispatched** = ``"Dispatched"``

#### Defined in

[middleware/typesV2.ts:27277](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27277)

___

### DividendCanceled

• **DividendCanceled** = ``"DividendCanceled"``

#### Defined in

[middleware/typesV2.ts:27278](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27278)

___

### DividendCreated

• **DividendCreated** = ``"DividendCreated"``

#### Defined in

[middleware/typesV2.ts:27279](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27279)

___

### DividendPaidOutToUser

• **DividendPaidOutToUser** = ``"DividendPaidOutToUser"``

#### Defined in

[middleware/typesV2.ts:27280](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27280)

___

### DividendRemainingClaimed

• **DividendRemainingClaimed** = ``"DividendRemainingClaimed"``

#### Defined in

[middleware/typesV2.ts:27281](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27281)

___

### DivisibilityChanged

• **DivisibilityChanged** = ``"DivisibilityChanged"``

#### Defined in

[middleware/typesV2.ts:27282](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27282)

___

### DocumentAdded

• **DocumentAdded** = ``"DocumentAdded"``

#### Defined in

[middleware/typesV2.ts:27283](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27283)

___

### DocumentRemoved

• **DocumentRemoved** = ``"DocumentRemoved"``

#### Defined in

[middleware/typesV2.ts:27284](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27284)

___

### Dummy

• **Dummy** = ``"Dummy"``

#### Defined in

[middleware/typesV2.ts:27285](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27285)

___

### Endowed

• **Endowed** = ``"Endowed"``

#### Defined in

[middleware/typesV2.ts:27286](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27286)

___

### EraPayout

• **EraPayout** = ``"EraPayout"``

#### Defined in

[middleware/typesV2.ts:27287](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27287)

___

### Evicted

• **Evicted** = ``"Evicted"``

#### Defined in

[middleware/typesV2.ts:27288](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27288)

___

### Executed

• **Executed** = ``"Executed"``

#### Defined in

[middleware/typesV2.ts:27289](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27289)

___

### ExecutionCancellingFailed

• **ExecutionCancellingFailed** = ``"ExecutionCancellingFailed"``

#### Defined in

[middleware/typesV2.ts:27290](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27290)

___

### ExecutionScheduled

• **ExecutionScheduled** = ``"ExecutionScheduled"``

#### Defined in

[middleware/typesV2.ts:27291](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27291)

___

### ExecutionSchedulingFailed

• **ExecutionSchedulingFailed** = ``"ExecutionSchedulingFailed"``

#### Defined in

[middleware/typesV2.ts:27292](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27292)

___

### ExemptedUpdated

• **ExemptedUpdated** = ``"ExemptedUpdated"``

#### Defined in

[middleware/typesV2.ts:27293](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27293)

___

### ExemptionListModified

• **ExemptionListModified** = ``"ExemptionListModified"``

#### Defined in

[middleware/typesV2.ts:27294](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27294)

___

### ExemptionsAdded

• **ExemptionsAdded** = ``"ExemptionsAdded"``

#### Defined in

[middleware/typesV2.ts:27295](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27295)

___

### ExemptionsRemoved

• **ExemptionsRemoved** = ``"ExemptionsRemoved"``

#### Defined in

[middleware/typesV2.ts:27296](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27296)

___

### ExpiresAfterUpdated

• **ExpiresAfterUpdated** = ``"ExpiresAfterUpdated"``

#### Defined in

[middleware/typesV2.ts:27297](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27297)

___

### ExpiryScheduled

• **ExpiryScheduled** = ``"ExpiryScheduled"``

#### Defined in

[middleware/typesV2.ts:27298](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27298)

___

### ExpirySchedulingFailed

• **ExpirySchedulingFailed** = ``"ExpirySchedulingFailed"``

#### Defined in

[middleware/typesV2.ts:27299](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27299)

___

### ExtensionAdded

• **ExtensionAdded** = ``"ExtensionAdded"``

#### Defined in

[middleware/typesV2.ts:27300](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27300)

___

### ExtensionArchived

• **ExtensionArchived** = ``"ExtensionArchived"``

#### Defined in

[middleware/typesV2.ts:27301](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27301)

___

### ExtensionRemoved

• **ExtensionRemoved** = ``"ExtensionRemoved"``

#### Defined in

[middleware/typesV2.ts:27302](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27302)

___

### ExtensionUnArchive

• **ExtensionUnArchive** = ``"ExtensionUnArchive"``

#### Defined in

[middleware/typesV2.ts:27303](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27303)

___

### ExtrinsicFailed

• **ExtrinsicFailed** = ``"ExtrinsicFailed"``

#### Defined in

[middleware/typesV2.ts:27304](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27304)

___

### ExtrinsicSuccess

• **ExtrinsicSuccess** = ``"ExtrinsicSuccess"``

#### Defined in

[middleware/typesV2.ts:27305](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27305)

___

### FailedToExecuteInstruction

• **FailedToExecuteInstruction** = ``"FailedToExecuteInstruction"``

#### Defined in

[middleware/typesV2.ts:27306](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27306)

___

### FeeCharged

• **FeeCharged** = ``"FeeCharged"``

#### Defined in

[middleware/typesV2.ts:27307](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27307)

___

### FeeSet

• **FeeSet** = ``"FeeSet"``

#### Defined in

[middleware/typesV2.ts:27308](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27308)

___

### FinalVotes

• **FinalVotes** = ``"FinalVotes"``

#### Defined in

[middleware/typesV2.ts:27309](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27309)

___

### FreezeAdminAdded

• **FreezeAdminAdded** = ``"FreezeAdminAdded"``

#### Defined in

[middleware/typesV2.ts:27310](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27310)

___

### FreezeAdminRemoved

• **FreezeAdminRemoved** = ``"FreezeAdminRemoved"``

#### Defined in

[middleware/typesV2.ts:27311](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27311)

___

### Frozen

• **Frozen** = ``"Frozen"``

#### Defined in

[middleware/typesV2.ts:27312](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27312)

___

### FrozenTx

• **FrozenTx** = ``"FrozenTx"``

#### Defined in

[middleware/typesV2.ts:27313](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27313)

___

### FundingRoundSet

• **FundingRoundSet** = ``"FundingRoundSet"``

#### Defined in

[middleware/typesV2.ts:27314](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27314)

___

### FundraiserClosed

• **FundraiserClosed** = ``"FundraiserClosed"``

#### Defined in

[middleware/typesV2.ts:27315](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27315)

___

### FundraiserCreated

• **FundraiserCreated** = ``"FundraiserCreated"``

#### Defined in

[middleware/typesV2.ts:27316](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27316)

___

### FundraiserFrozen

• **FundraiserFrozen** = ``"FundraiserFrozen"``

#### Defined in

[middleware/typesV2.ts:27317](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27317)

___

### FundraiserUnfrozen

• **FundraiserUnfrozen** = ``"FundraiserUnfrozen"``

#### Defined in

[middleware/typesV2.ts:27318](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27318)

___

### FundraiserWindowModifed

• **FundraiserWindowModifed** = ``"FundraiserWindowModifed"``

#### Defined in

[middleware/typesV2.ts:27319](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27319)

___

### FundraiserWindowModified

• **FundraiserWindowModified** = ``"FundraiserWindowModified"``

#### Defined in

[middleware/typesV2.ts:27320](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27320)

___

### FundsRaised

• **FundsRaised** = ``"FundsRaised"``

#### Defined in

[middleware/typesV2.ts:27321](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27321)

___

### FungibleTokensMovedBetweenPortfolios

• **FungibleTokensMovedBetweenPortfolios** = ``"FungibleTokensMovedBetweenPortfolios"``

#### Defined in

[middleware/typesV2.ts:27322](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27322)

___

### GlobalCommissionUpdated

• **GlobalCommissionUpdated** = ``"GlobalCommissionUpdated"``

#### Defined in

[middleware/typesV2.ts:27323](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27323)

___

### GroupChanged

• **GroupChanged** = ``"GroupChanged"``

#### Defined in

[middleware/typesV2.ts:27324](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27324)

___

### GroupCreated

• **GroupCreated** = ``"GroupCreated"``

#### Defined in

[middleware/typesV2.ts:27325](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27325)

___

### GroupPermissionsUpdated

• **GroupPermissionsUpdated** = ``"GroupPermissionsUpdated"``

#### Defined in

[middleware/typesV2.ts:27326](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27326)

___

### HeartbeatReceived

• **HeartbeatReceived** = ``"HeartbeatReceived"``

#### Defined in

[middleware/typesV2.ts:27327](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27327)

___

### HistoricalPipsPruned

• **HistoricalPipsPruned** = ``"HistoricalPipsPruned"``

#### Defined in

[middleware/typesV2.ts:27328](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27328)

___

### IdentifiersUpdated

• **IdentifiersUpdated** = ``"IdentifiersUpdated"``

#### Defined in

[middleware/typesV2.ts:27329](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27329)

___

### IndexAssigned

• **IndexAssigned** = ``"IndexAssigned"``

#### Defined in

[middleware/typesV2.ts:27330](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27330)

___

### IndexFreed

• **IndexFreed** = ``"IndexFreed"``

#### Defined in

[middleware/typesV2.ts:27331](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27331)

___

### IndexFrozen

• **IndexFrozen** = ``"IndexFrozen"``

#### Defined in

[middleware/typesV2.ts:27332](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27332)

___

### IndividualCommissionEnabled

• **IndividualCommissionEnabled** = ``"IndividualCommissionEnabled"``

#### Defined in

[middleware/typesV2.ts:27333](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27333)

___

### Instantiated

• **Instantiated** = ``"Instantiated"``

#### Defined in

[middleware/typesV2.ts:27334](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27334)

___

### InstantiationFeeChanged

• **InstantiationFeeChanged** = ``"InstantiationFeeChanged"``

#### Defined in

[middleware/typesV2.ts:27335](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27335)

___

### InstantiationFreezed

• **InstantiationFreezed** = ``"InstantiationFreezed"``

#### Defined in

[middleware/typesV2.ts:27336](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27336)

___

### InstantiationUnFreezed

• **InstantiationUnFreezed** = ``"InstantiationUnFreezed"``

#### Defined in

[middleware/typesV2.ts:27337](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27337)

___

### InstructionAffirmed

• **InstructionAffirmed** = ``"InstructionAffirmed"``

#### Defined in

[middleware/typesV2.ts:27338](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27338)

___

### InstructionAuthorized

• **InstructionAuthorized** = ``"InstructionAuthorized"``

#### Defined in

[middleware/typesV2.ts:27339](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27339)

___

### InstructionCreated

• **InstructionCreated** = ``"InstructionCreated"``

#### Defined in

[middleware/typesV2.ts:27340](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27340)

___

### InstructionExecuted

• **InstructionExecuted** = ``"InstructionExecuted"``

#### Defined in

[middleware/typesV2.ts:27341](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27341)

___

### InstructionFailed

• **InstructionFailed** = ``"InstructionFailed"``

#### Defined in

[middleware/typesV2.ts:27342](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27342)

___

### InstructionRejected

• **InstructionRejected** = ``"InstructionRejected"``

#### Defined in

[middleware/typesV2.ts:27343](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27343)

___

### InstructionRescheduled

• **InstructionRescheduled** = ``"InstructionRescheduled"``

#### Defined in

[middleware/typesV2.ts:27344](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27344)

___

### InstructionUnauthorized

• **InstructionUnauthorized** = ``"InstructionUnauthorized"``

#### Defined in

[middleware/typesV2.ts:27345](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27345)

___

### InstructionV2Created

• **InstructionV2Created** = ``"InstructionV2Created"``

#### Defined in

[middleware/typesV2.ts:27346](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27346)

___

### InvalidatedNominators

• **InvalidatedNominators** = ``"InvalidatedNominators"``

#### Defined in

[middleware/typesV2.ts:27347](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27347)

___

### Invested

• **Invested** = ``"Invested"``

#### Defined in

[middleware/typesV2.ts:27348](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27348)

___

### InvestorUniquenessClaimNotAllowed

• **InvestorUniquenessClaimNotAllowed** = ``"InvestorUniquenessClaimNotAllowed"``

#### Defined in

[middleware/typesV2.ts:27349](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27349)

___

### IsIssuable

• **IsIssuable** = ``"IsIssuable"``

#### Defined in

[middleware/typesV2.ts:27350](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27350)

___

### Issued

• **Issued** = ``"Issued"``

#### Defined in

[middleware/typesV2.ts:27351](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27351)

___

### IssuedNft

• **IssuedNft** = ``"IssuedNFT"``

#### Defined in

[middleware/typesV2.ts:27352](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27352)

___

### ItnRewardClaimed

• **ItnRewardClaimed** = ``"ItnRewardClaimed"``

#### Defined in

[middleware/typesV2.ts:27353](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27353)

___

### KeyChanged

• **KeyChanged** = ``"KeyChanged"``

#### Defined in

[middleware/typesV2.ts:27354](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27354)

___

### KilledAccount

• **KilledAccount** = ``"KilledAccount"``

#### Defined in

[middleware/typesV2.ts:27355](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27355)

___

### LegFailedExecution

• **LegFailedExecution** = ``"LegFailedExecution"``

#### Defined in

[middleware/typesV2.ts:27356](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27356)

___

### LocalMetadataKeyDeleted

• **LocalMetadataKeyDeleted** = ``"LocalMetadataKeyDeleted"``

#### Defined in

[middleware/typesV2.ts:27357](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27357)

___

### MasterKeyUpdated

• **MasterKeyUpdated** = ``"MasterKeyUpdated"``

#### Defined in

[middleware/typesV2.ts:27358](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27358)

___

### MaxDetailsLengthChanged

• **MaxDetailsLengthChanged** = ``"MaxDetailsLengthChanged"``

#### Defined in

[middleware/typesV2.ts:27359](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27359)

___

### MaxPipSkipCountChanged

• **MaxPipSkipCountChanged** = ``"MaxPipSkipCountChanged"``

#### Defined in

[middleware/typesV2.ts:27360](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27360)

___

### MaximumSchedulesComplexityChanged

• **MaximumSchedulesComplexityChanged** = ``"MaximumSchedulesComplexityChanged"``

#### Defined in

[middleware/typesV2.ts:27361](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27361)

___

### MemberAdded

• **MemberAdded** = ``"MemberAdded"``

#### Defined in

[middleware/typesV2.ts:27362](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27362)

___

### MemberRemoved

• **MemberRemoved** = ``"MemberRemoved"``

#### Defined in

[middleware/typesV2.ts:27363](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27363)

___

### MemberRevoked

• **MemberRevoked** = ``"MemberRevoked"``

#### Defined in

[middleware/typesV2.ts:27364](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27364)

___

### MembersReset

• **MembersReset** = ``"MembersReset"``

#### Defined in

[middleware/typesV2.ts:27365](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27365)

___

### MembersSwapped

• **MembersSwapped** = ``"MembersSwapped"``

#### Defined in

[middleware/typesV2.ts:27366](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27366)

___

### MetaChanged

• **MetaChanged** = ``"MetaChanged"``

#### Defined in

[middleware/typesV2.ts:27367](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27367)

___

### MetadataValueDeleted

• **MetadataValueDeleted** = ``"MetadataValueDeleted"``

#### Defined in

[middleware/typesV2.ts:27368](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27368)

___

### MinimumBondThresholdUpdated

• **MinimumBondThresholdUpdated** = ``"MinimumBondThresholdUpdated"``

#### Defined in

[middleware/typesV2.ts:27369](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27369)

___

### MinimumProposalDepositChanged

• **MinimumProposalDepositChanged** = ``"MinimumProposalDepositChanged"``

#### Defined in

[middleware/typesV2.ts:27370](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27370)

___

### MockInvestorUidCreated

• **MockInvestorUidCreated** = ``"MockInvestorUIDCreated"``

#### Defined in

[middleware/typesV2.ts:27371](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27371)

___

### MovedBetweenPortfolios

• **MovedBetweenPortfolios** = ``"MovedBetweenPortfolios"``

#### Defined in

[middleware/typesV2.ts:27372](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27372)

___

### MultiSigCreated

• **MultiSigCreated** = ``"MultiSigCreated"``

#### Defined in

[middleware/typesV2.ts:27373](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27373)

___

### MultiSigSignaturesRequiredChanged

• **MultiSigSignaturesRequiredChanged** = ``"MultiSigSignaturesRequiredChanged"``

#### Defined in

[middleware/typesV2.ts:27374](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27374)

___

### MultiSigSignerAdded

• **MultiSigSignerAdded** = ``"MultiSigSignerAdded"``

#### Defined in

[middleware/typesV2.ts:27375](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27375)

___

### MultiSigSignerAuthorized

• **MultiSigSignerAuthorized** = ``"MultiSigSignerAuthorized"``

#### Defined in

[middleware/typesV2.ts:27376](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27376)

___

### MultiSigSignerRemoved

• **MultiSigSignerRemoved** = ``"MultiSigSignerRemoved"``

#### Defined in

[middleware/typesV2.ts:27377](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27377)

___

### NewAccount

• **NewAccount** = ``"NewAccount"``

#### Defined in

[middleware/typesV2.ts:27379](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27379)

___

### NewAssetRuleCreated

• **NewAssetRuleCreated** = ``"NewAssetRuleCreated"``

#### Defined in

[middleware/typesV2.ts:27380](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27380)

___

### NewAuthorities

• **NewAuthorities** = ``"NewAuthorities"``

#### Defined in

[middleware/typesV2.ts:27381](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27381)

___

### NewSession

• **NewSession** = ``"NewSession"``

#### Defined in

[middleware/typesV2.ts:27382](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27382)

___

### NfTsMovedBetweenPortfolios

• **NfTsMovedBetweenPortfolios** = ``"NFTsMovedBetweenPortfolios"``

#### Defined in

[middleware/typesV2.ts:27378](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27378)

___

### NftCollectionCreated

• **NftCollectionCreated** = ``"NftCollectionCreated"``

#### Defined in

[middleware/typesV2.ts:27383](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27383)

___

### Nominated

• **Nominated** = ``"Nominated"``

#### Defined in

[middleware/typesV2.ts:27384](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27384)

___

### Noted

• **Noted** = ``"Noted"``

#### Defined in

[middleware/typesV2.ts:27385](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27385)

___

### OffChainAuthorizationRevoked

• **OffChainAuthorizationRevoked** = ``"OffChainAuthorizationRevoked"``

#### Defined in

[middleware/typesV2.ts:27386](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27386)

___

### Offence

• **Offence** = ``"Offence"``

#### Defined in

[middleware/typesV2.ts:27387](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27387)

___

### OldSlashingReportDiscarded

• **OldSlashingReportDiscarded** = ``"OldSlashingReportDiscarded"``

#### Defined in

[middleware/typesV2.ts:27388](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27388)

___

### Paused

• **Paused** = ``"Paused"``

#### Defined in

[middleware/typesV2.ts:27389](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27389)

___

### PendingPipExpiryChanged

• **PendingPipExpiryChanged** = ``"PendingPipExpiryChanged"``

#### Defined in

[middleware/typesV2.ts:27390](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27390)

___

### PeriodicFailed

• **PeriodicFailed** = ``"PeriodicFailed"``

#### Defined in

[middleware/typesV2.ts:27391](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27391)

___

### PermanentlyOverweight

• **PermanentlyOverweight** = ``"PermanentlyOverweight"``

#### Defined in

[middleware/typesV2.ts:27392](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27392)

___

### PermissionedIdentityAdded

• **PermissionedIdentityAdded** = ``"PermissionedIdentityAdded"``

#### Defined in

[middleware/typesV2.ts:27393](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27393)

___

### PermissionedIdentityRemoved

• **PermissionedIdentityRemoved** = ``"PermissionedIdentityRemoved"``

#### Defined in

[middleware/typesV2.ts:27394](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27394)

___

### PermissionedValidatorAdded

• **PermissionedValidatorAdded** = ``"PermissionedValidatorAdded"``

#### Defined in

[middleware/typesV2.ts:27395](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27395)

___

### PermissionedValidatorRemoved

• **PermissionedValidatorRemoved** = ``"PermissionedValidatorRemoved"``

#### Defined in

[middleware/typesV2.ts:27396](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27396)

___

### PermissionedValidatorStatusChanged

• **PermissionedValidatorStatusChanged** = ``"PermissionedValidatorStatusChanged"``

#### Defined in

[middleware/typesV2.ts:27397](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27397)

___

### PipClosed

• **PipClosed** = ``"PipClosed"``

#### Defined in

[middleware/typesV2.ts:27398](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27398)

___

### PipSkipped

• **PipSkipped** = ``"PipSkipped"``

#### Defined in

[middleware/typesV2.ts:27399](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27399)

___

### PlaceholderFillBlock

• **PlaceholderFillBlock** = ``"PlaceholderFillBlock"``

#### Defined in

[middleware/typesV2.ts:27400](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27400)

___

### PortfolioCreated

• **PortfolioCreated** = ``"PortfolioCreated"``

#### Defined in

[middleware/typesV2.ts:27401](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27401)

___

### PortfolioCustodianChanged

• **PortfolioCustodianChanged** = ``"PortfolioCustodianChanged"``

#### Defined in

[middleware/typesV2.ts:27402](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27402)

___

### PortfolioDeleted

• **PortfolioDeleted** = ``"PortfolioDeleted"``

#### Defined in

[middleware/typesV2.ts:27403](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27403)

___

### PortfolioRenamed

• **PortfolioRenamed** = ``"PortfolioRenamed"``

#### Defined in

[middleware/typesV2.ts:27404](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27404)

___

### PrimaryIssuanceAgentTransfered

• **PrimaryIssuanceAgentTransfered** = ``"PrimaryIssuanceAgentTransfered"``

#### Defined in

[middleware/typesV2.ts:27405](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27405)

___

### PrimaryIssuanceAgentTransferred

• **PrimaryIssuanceAgentTransferred** = ``"PrimaryIssuanceAgentTransferred"``

#### Defined in

[middleware/typesV2.ts:27406](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27406)

___

### PrimaryKeyUpdated

• **PrimaryKeyUpdated** = ``"PrimaryKeyUpdated"``

#### Defined in

[middleware/typesV2.ts:27407](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27407)

___

### ProposalAdded

• **ProposalAdded** = ``"ProposalAdded"``

#### Defined in

[middleware/typesV2.ts:27408](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27408)

___

### ProposalApproved

• **ProposalApproved** = ``"ProposalApproved"``

#### Defined in

[middleware/typesV2.ts:27409](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27409)

___

### ProposalBondAdjusted

• **ProposalBondAdjusted** = ``"ProposalBondAdjusted"``

#### Defined in

[middleware/typesV2.ts:27410](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27410)

___

### ProposalCoolOffPeriodChanged

• **ProposalCoolOffPeriodChanged** = ``"ProposalCoolOffPeriodChanged"``

#### Defined in

[middleware/typesV2.ts:27411](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27411)

___

### ProposalCreated

• **ProposalCreated** = ``"ProposalCreated"``

#### Defined in

[middleware/typesV2.ts:27412](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27412)

___

### ProposalDetailsAmended

• **ProposalDetailsAmended** = ``"ProposalDetailsAmended"``

#### Defined in

[middleware/typesV2.ts:27413](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27413)

___

### ProposalDurationChanged

• **ProposalDurationChanged** = ``"ProposalDurationChanged"``

#### Defined in

[middleware/typesV2.ts:27414](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27414)

___

### ProposalExecuted

• **ProposalExecuted** = ``"ProposalExecuted"``

#### Defined in

[middleware/typesV2.ts:27415](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27415)

___

### ProposalExecutionFailed

• **ProposalExecutionFailed** = ``"ProposalExecutionFailed"``

#### Defined in

[middleware/typesV2.ts:27416](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27416)

___

### ProposalRefund

• **ProposalRefund** = ``"ProposalRefund"``

#### Defined in

[middleware/typesV2.ts:27417](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27417)

___

### ProposalRejected

• **ProposalRejected** = ``"ProposalRejected"``

#### Defined in

[middleware/typesV2.ts:27418](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27418)

___

### ProposalRejectionVote

• **ProposalRejectionVote** = ``"ProposalRejectionVote"``

#### Defined in

[middleware/typesV2.ts:27419](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27419)

___

### ProposalStateUpdated

• **ProposalStateUpdated** = ``"ProposalStateUpdated"``

#### Defined in

[middleware/typesV2.ts:27420](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27420)

___

### Proposed

• **Proposed** = ``"Proposed"``

#### Defined in

[middleware/typesV2.ts:27421](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27421)

___

### PutCodeFlagChanged

• **PutCodeFlagChanged** = ``"PutCodeFlagChanged"``

#### Defined in

[middleware/typesV2.ts:27422](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27422)

___

### QuorumThresholdChanged

• **QuorumThresholdChanged** = ``"QuorumThresholdChanged"``

#### Defined in

[middleware/typesV2.ts:27423](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27423)

___

### RangeChanged

• **RangeChanged** = ``"RangeChanged"``

#### Defined in

[middleware/typesV2.ts:27425](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27425)

___

### RangeProofAdded

• **RangeProofAdded** = ``"RangeProofAdded"``

#### Defined in

[middleware/typesV2.ts:27426](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27426)

___

### RangeProofVerified

• **RangeProofVerified** = ``"RangeProofVerified"``

#### Defined in

[middleware/typesV2.ts:27427](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27427)

___

### RcvChanged

• **RcvChanged** = ``"RCVChanged"``

#### Defined in

[middleware/typesV2.ts:27424](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27424)

___

### ReceiptClaimed

• **ReceiptClaimed** = ``"ReceiptClaimed"``

#### Defined in

[middleware/typesV2.ts:27428](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27428)

___

### ReceiptUnclaimed

• **ReceiptUnclaimed** = ``"ReceiptUnclaimed"``

#### Defined in

[middleware/typesV2.ts:27429](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27429)

___

### ReceiptValidityChanged

• **ReceiptValidityChanged** = ``"ReceiptValidityChanged"``

#### Defined in

[middleware/typesV2.ts:27430](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27430)

___

### Reclaimed

• **Reclaimed** = ``"Reclaimed"``

#### Defined in

[middleware/typesV2.ts:27431](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27431)

___

### RecordDateChanged

• **RecordDateChanged** = ``"RecordDateChanged"``

#### Defined in

[middleware/typesV2.ts:27432](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27432)

___

### Redeemed

• **Redeemed** = ``"Redeemed"``

#### Defined in

[middleware/typesV2.ts:27433](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27433)

___

### RedeemedNft

• **RedeemedNft** = ``"RedeemedNFT"``

#### Defined in

[middleware/typesV2.ts:27434](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27434)

___

### ReferendumCreated

• **ReferendumCreated** = ``"ReferendumCreated"``

#### Defined in

[middleware/typesV2.ts:27435](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27435)

___

### ReferendumScheduled

• **ReferendumScheduled** = ``"ReferendumScheduled"``

#### Defined in

[middleware/typesV2.ts:27436](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27436)

___

### ReferendumStateUpdated

• **ReferendumStateUpdated** = ``"ReferendumStateUpdated"``

#### Defined in

[middleware/typesV2.ts:27437](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27437)

___

### RegisterAssetMetadataGlobalType

• **RegisterAssetMetadataGlobalType** = ``"RegisterAssetMetadataGlobalType"``

#### Defined in

[middleware/typesV2.ts:27438](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27438)

___

### RegisterAssetMetadataLocalType

• **RegisterAssetMetadataLocalType** = ``"RegisterAssetMetadataLocalType"``

#### Defined in

[middleware/typesV2.ts:27439](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27439)

___

### Rejected

• **Rejected** = ``"Rejected"``

#### Defined in

[middleware/typesV2.ts:27440](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27440)

___

### ReleaseCoordinatorUpdated

• **ReleaseCoordinatorUpdated** = ``"ReleaseCoordinatorUpdated"``

#### Defined in

[middleware/typesV2.ts:27441](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27441)

___

### Remarked

• **Remarked** = ``"Remarked"``

#### Defined in

[middleware/typesV2.ts:27442](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27442)

___

### Removed

• **Removed** = ``"Removed"``

#### Defined in

[middleware/typesV2.ts:27443](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27443)

___

### RemovedPayingKey

• **RemovedPayingKey** = ``"RemovedPayingKey"``

#### Defined in

[middleware/typesV2.ts:27444](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27444)

___

### Requested

• **Requested** = ``"Requested"``

#### Defined in

[middleware/typesV2.ts:27445](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27445)

___

### ReserveRepatriated

• **ReserveRepatriated** = ``"ReserveRepatriated"``

#### Defined in

[middleware/typesV2.ts:27446](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27446)

___

### Reserved

• **Reserved** = ``"Reserved"``

#### Defined in

[middleware/typesV2.ts:27447](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27447)

___

### Restored

• **Restored** = ``"Restored"``

#### Defined in

[middleware/typesV2.ts:27448](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27448)

___

### Resumed

• **Resumed** = ``"Resumed"``

#### Defined in

[middleware/typesV2.ts:27449](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27449)

___

### Reward

• **Reward** = ``"Reward"``

#### Defined in

[middleware/typesV2.ts:27450](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27450)

___

### RewardPaymentSchedulingInterrupted

• **RewardPaymentSchedulingInterrupted** = ``"RewardPaymentSchedulingInterrupted"``

#### Defined in

[middleware/typesV2.ts:27451](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27451)

___

### ScheduleCreated

• **ScheduleCreated** = ``"ScheduleCreated"``

#### Defined in

[middleware/typesV2.ts:27452](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27452)

___

### ScheduleRemoved

• **ScheduleRemoved** = ``"ScheduleRemoved"``

#### Defined in

[middleware/typesV2.ts:27453](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27453)

___

### ScheduleUpdated

• **ScheduleUpdated** = ``"ScheduleUpdated"``

#### Defined in

[middleware/typesV2.ts:27454](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27454)

___

### Scheduled

• **Scheduled** = ``"Scheduled"``

#### Defined in

[middleware/typesV2.ts:27455](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27455)

___

### SchedulingFailed

• **SchedulingFailed** = ``"SchedulingFailed"``

#### Defined in

[middleware/typesV2.ts:27456](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27456)

___

### SecondaryKeyLeftIdentity

• **SecondaryKeyLeftIdentity** = ``"SecondaryKeyLeftIdentity"``

#### Defined in

[middleware/typesV2.ts:27457](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27457)

___

### SecondaryKeyPermissionsUpdated

• **SecondaryKeyPermissionsUpdated** = ``"SecondaryKeyPermissionsUpdated"``

#### Defined in

[middleware/typesV2.ts:27458](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27458)

___

### SecondaryKeysAdded

• **SecondaryKeysAdded** = ``"SecondaryKeysAdded"``

#### Defined in

[middleware/typesV2.ts:27459](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27459)

___

### SecondaryKeysFrozen

• **SecondaryKeysFrozen** = ``"SecondaryKeysFrozen"``

#### Defined in

[middleware/typesV2.ts:27460](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27460)

___

### SecondaryKeysRemoved

• **SecondaryKeysRemoved** = ``"SecondaryKeysRemoved"``

#### Defined in

[middleware/typesV2.ts:27461](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27461)

___

### SecondaryKeysUnfrozen

• **SecondaryKeysUnfrozen** = ``"SecondaryKeysUnfrozen"``

#### Defined in

[middleware/typesV2.ts:27462](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27462)

___

### SecondaryPermissionsUpdated

• **SecondaryPermissionsUpdated** = ``"SecondaryPermissionsUpdated"``

#### Defined in

[middleware/typesV2.ts:27463](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27463)

___

### SetAssetMetadataValue

• **SetAssetMetadataValue** = ``"SetAssetMetadataValue"``

#### Defined in

[middleware/typesV2.ts:27464](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27464)

___

### SetAssetMetadataValueDetails

• **SetAssetMetadataValueDetails** = ``"SetAssetMetadataValueDetails"``

#### Defined in

[middleware/typesV2.ts:27465](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27465)

___

### SetAssetTransferCompliance

• **SetAssetTransferCompliance** = ``"SetAssetTransferCompliance"``

#### Defined in

[middleware/typesV2.ts:27466](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27466)

___

### SettlementManuallyExecuted

• **SettlementManuallyExecuted** = ``"SettlementManuallyExecuted"``

#### Defined in

[middleware/typesV2.ts:27467](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27467)

___

### SignerLeft

• **SignerLeft** = ``"SignerLeft"``

#### Defined in

[middleware/typesV2.ts:27468](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27468)

___

### SigningKeysAdded

• **SigningKeysAdded** = ``"SigningKeysAdded"``

#### Defined in

[middleware/typesV2.ts:27469](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27469)

___

### SigningKeysFrozen

• **SigningKeysFrozen** = ``"SigningKeysFrozen"``

#### Defined in

[middleware/typesV2.ts:27470](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27470)

___

### SigningKeysRemoved

• **SigningKeysRemoved** = ``"SigningKeysRemoved"``

#### Defined in

[middleware/typesV2.ts:27471](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27471)

___

### SigningKeysUnfrozen

• **SigningKeysUnfrozen** = ``"SigningKeysUnfrozen"``

#### Defined in

[middleware/typesV2.ts:27472](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27472)

___

### SigningPermissionsUpdated

• **SigningPermissionsUpdated** = ``"SigningPermissionsUpdated"``

#### Defined in

[middleware/typesV2.ts:27473](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27473)

___

### Slash

• **Slash** = ``"Slash"``

#### Defined in

[middleware/typesV2.ts:27474](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27474)

___

### SlashingAllowedForChanged

• **SlashingAllowedForChanged** = ``"SlashingAllowedForChanged"``

#### Defined in

[middleware/typesV2.ts:27475](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27475)

___

### SlashingParamsUpdated

• **SlashingParamsUpdated** = ``"SlashingParamsUpdated"``

#### Defined in

[middleware/typesV2.ts:27476](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27476)

___

### SnapshotCleared

• **SnapshotCleared** = ``"SnapshotCleared"``

#### Defined in

[middleware/typesV2.ts:27477](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27477)

___

### SnapshotResultsEnacted

• **SnapshotResultsEnacted** = ``"SnapshotResultsEnacted"``

#### Defined in

[middleware/typesV2.ts:27478](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27478)

___

### SnapshotTaken

• **SnapshotTaken** = ``"SnapshotTaken"``

#### Defined in

[middleware/typesV2.ts:27479](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27479)

___

### SolutionStored

• **SolutionStored** = ``"SolutionStored"``

#### Defined in

[middleware/typesV2.ts:27480](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27480)

___

### SomeOffline

• **SomeOffline** = ``"SomeOffline"``

#### Defined in

[middleware/typesV2.ts:27481](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27481)

___

### StakingElection

• **StakingElection** = ``"StakingElection"``

#### Defined in

[middleware/typesV2.ts:27482](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27482)

___

### StatTypesAdded

• **StatTypesAdded** = ``"StatTypesAdded"``

#### Defined in

[middleware/typesV2.ts:27483](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27483)

___

### StatTypesRemoved

• **StatTypesRemoved** = ``"StatTypesRemoved"``

#### Defined in

[middleware/typesV2.ts:27484](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27484)

___

### Sudid

• **Sudid** = ``"Sudid"``

#### Defined in

[middleware/typesV2.ts:27485](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27485)

___

### SudoAsDone

• **SudoAsDone** = ``"SudoAsDone"``

#### Defined in

[middleware/typesV2.ts:27486](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27486)

___

### TemplateInstantiationFeeChanged

• **TemplateInstantiationFeeChanged** = ``"TemplateInstantiationFeeChanged"``

#### Defined in

[middleware/typesV2.ts:27487](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27487)

___

### TemplateMetaUrlChanged

• **TemplateMetaUrlChanged** = ``"TemplateMetaUrlChanged"``

#### Defined in

[middleware/typesV2.ts:27488](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27488)

___

### TemplateOwnershipTransferred

• **TemplateOwnershipTransferred** = ``"TemplateOwnershipTransferred"``

#### Defined in

[middleware/typesV2.ts:27489](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27489)

___

### TemplateUsageFeeChanged

• **TemplateUsageFeeChanged** = ``"TemplateUsageFeeChanged"``

#### Defined in

[middleware/typesV2.ts:27490](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27490)

___

### Terminated

• **Terminated** = ``"Terminated"``

#### Defined in

[middleware/typesV2.ts:27491](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27491)

___

### TickerRegistered

• **TickerRegistered** = ``"TickerRegistered"``

#### Defined in

[middleware/typesV2.ts:27492](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27492)

___

### TickerTransferred

• **TickerTransferred** = ``"TickerTransferred"``

#### Defined in

[middleware/typesV2.ts:27493](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27493)

___

### TimelockChanged

• **TimelockChanged** = ``"TimelockChanged"``

#### Defined in

[middleware/typesV2.ts:27494](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27494)

___

### TransactionFeePaid

• **TransactionFeePaid** = ``"TransactionFeePaid"``

#### Defined in

[middleware/typesV2.ts:27495](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27495)

___

### Transfer

• **Transfer** = ``"Transfer"``

#### Defined in

[middleware/typesV2.ts:27496](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27496)

___

### TransferConditionExemptionsAdded

• **TransferConditionExemptionsAdded** = ``"TransferConditionExemptionsAdded"``

#### Defined in

[middleware/typesV2.ts:27497](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27497)

___

### TransferConditionExemptionsRemoved

• **TransferConditionExemptionsRemoved** = ``"TransferConditionExemptionsRemoved"``

#### Defined in

[middleware/typesV2.ts:27498](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27498)

___

### TransferManagerAdded

• **TransferManagerAdded** = ``"TransferManagerAdded"``

#### Defined in

[middleware/typesV2.ts:27499](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27499)

___

### TransferManagerRemoved

• **TransferManagerRemoved** = ``"TransferManagerRemoved"``

#### Defined in

[middleware/typesV2.ts:27500](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27500)

___

### TransferWithData

• **TransferWithData** = ``"TransferWithData"``

#### Defined in

[middleware/typesV2.ts:27501](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27501)

___

### TreasuryDidSet

• **TreasuryDidSet** = ``"TreasuryDidSet"``

#### Defined in

[middleware/typesV2.ts:27502](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27502)

___

### TreasuryDisbursement

• **TreasuryDisbursement** = ``"TreasuryDisbursement"``

#### Defined in

[middleware/typesV2.ts:27503](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27503)

___

### TreasuryDisbursementFailed

• **TreasuryDisbursementFailed** = ``"TreasuryDisbursementFailed"``

#### Defined in

[middleware/typesV2.ts:27504](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27504)

___

### TreasuryReimbursement

• **TreasuryReimbursement** = ``"TreasuryReimbursement"``

#### Defined in

[middleware/typesV2.ts:27505](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27505)

___

### TrustedDefaultClaimIssuerAdded

• **TrustedDefaultClaimIssuerAdded** = ``"TrustedDefaultClaimIssuerAdded"``

#### Defined in

[middleware/typesV2.ts:27506](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27506)

___

### TrustedDefaultClaimIssuerRemoved

• **TrustedDefaultClaimIssuerRemoved** = ``"TrustedDefaultClaimIssuerRemoved"``

#### Defined in

[middleware/typesV2.ts:27507](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27507)

___

### TxRemoved

• **TxRemoved** = ``"TxRemoved"``

#### Defined in

[middleware/typesV2.ts:27508](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27508)

___

### TxsHandled

• **TxsHandled** = ``"TxsHandled"``

#### Defined in

[middleware/typesV2.ts:27509](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27509)

___

### Unbonded

• **Unbonded** = ``"Unbonded"``

#### Defined in

[middleware/typesV2.ts:27510](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27510)

___

### UnexpectedError

• **UnexpectedError** = ``"UnexpectedError"``

#### Defined in

[middleware/typesV2.ts:27511](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27511)

___

### Unfrozen

• **Unfrozen** = ``"Unfrozen"``

#### Defined in

[middleware/typesV2.ts:27512](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27512)

___

### UnfrozenTx

• **UnfrozenTx** = ``"UnfrozenTx"``

#### Defined in

[middleware/typesV2.ts:27513](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27513)

___

### Unreserved

• **Unreserved** = ``"Unreserved"``

#### Defined in

[middleware/typesV2.ts:27514](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27514)

___

### UpdatedPolyxLimit

• **UpdatedPolyxLimit** = ``"UpdatedPolyxLimit"``

#### Defined in

[middleware/typesV2.ts:27515](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27515)

___

### UserPortfolios

• **UserPortfolios** = ``"UserPortfolios"``

#### Defined in

[middleware/typesV2.ts:27516](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27516)

___

### VenueCreated

• **VenueCreated** = ``"VenueCreated"``

#### Defined in

[middleware/typesV2.ts:27517](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27517)

___

### VenueDetailsUpdated

• **VenueDetailsUpdated** = ``"VenueDetailsUpdated"``

#### Defined in

[middleware/typesV2.ts:27518](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27518)

___

### VenueFiltering

• **VenueFiltering** = ``"VenueFiltering"``

#### Defined in

[middleware/typesV2.ts:27519](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27519)

___

### VenueSignersUpdated

• **VenueSignersUpdated** = ``"VenueSignersUpdated"``

#### Defined in

[middleware/typesV2.ts:27520](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27520)

___

### VenueTypeUpdated

• **VenueTypeUpdated** = ``"VenueTypeUpdated"``

#### Defined in

[middleware/typesV2.ts:27521](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27521)

___

### VenueUnauthorized

• **VenueUnauthorized** = ``"VenueUnauthorized"``

#### Defined in

[middleware/typesV2.ts:27522](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27522)

___

### VenueUpdated

• **VenueUpdated** = ``"VenueUpdated"``

#### Defined in

[middleware/typesV2.ts:27523](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27523)

___

### VenuesAllowed

• **VenuesAllowed** = ``"VenuesAllowed"``

#### Defined in

[middleware/typesV2.ts:27524](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27524)

___

### VenuesBlocked

• **VenuesBlocked** = ``"VenuesBlocked"``

#### Defined in

[middleware/typesV2.ts:27525](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27525)

___

### VoteCast

• **VoteCast** = ``"VoteCast"``

#### Defined in

[middleware/typesV2.ts:27526](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27526)

___

### VoteEnactReferendum

• **VoteEnactReferendum** = ``"VoteEnactReferendum"``

#### Defined in

[middleware/typesV2.ts:27527](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27527)

___

### VoteRejectReferendum

• **VoteRejectReferendum** = ``"VoteRejectReferendum"``

#### Defined in

[middleware/typesV2.ts:27528](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27528)

___

### VoteRetracted

• **VoteRetracted** = ``"VoteRetracted"``

#### Defined in

[middleware/typesV2.ts:27529](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27529)

___

### VoteThresholdUpdated

• **VoteThresholdUpdated** = ``"VoteThresholdUpdated"``

#### Defined in

[middleware/typesV2.ts:27530](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27530)

___

### Voted

• **Voted** = ``"Voted"``

#### Defined in

[middleware/typesV2.ts:27531](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27531)

___

### Withdrawn

• **Withdrawn** = ``"Withdrawn"``

#### Defined in

[middleware/typesV2.ts:27532](https://github.com/PolymeshAssociation/polymesh-sdk/blob/07a4c5b0/src/middleware/typesV2.ts#L27532)
